Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: I0709fb76a91edba3a67b139bb09171dc756010cd

Former-commit-id: 6d1ddadb679d07e123a4c2ad830515794298f830

--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -1617,9 +1617,10 @@
     <string name="storage_menu_rename" msgid="8549835371429159336">"እንደገና ሰይም"</string>
     <string name="storage_menu_mount" msgid="4760531872302820569">"አፈናጥ"</string>
     <string name="storage_menu_unmount" msgid="8171552487742912282">"አስወጣ"</string>
-    <string name="storage_menu_format" msgid="5454870642788909443">"ቅርጸት"</string>
+    <string name="storage_menu_format" msgid="8903698999905354146">"ኤስዲ ካርድን ለተንቀሳቃሽ ማከማቻ ቅርጸት ይስሩበት"</string>
+    <string name="storage_menu_format_button" msgid="7623565190643699626">"የካርድ ቅርጸት ስራ"</string>
     <string name="storage_menu_format_public" msgid="5567214442727034630">"እንደተንቀሳቃሽ ቅረጽ"</string>
-    <string name="storage_menu_format_private" msgid="3208326980027382079">"እንደውስጣዊ ቅረጽ"</string>
+    <string name="storage_menu_format_option" msgid="4886059624052908432">"ቅርጸት"</string>
     <string name="storage_menu_migrate" msgid="2196088149560070193">"ውሂብ ስደድ"</string>
     <string name="storage_menu_forget" msgid="5154017890033638936">"እርሳ"</string>
     <string name="storage_menu_set_up" msgid="4401074025612064744">"አዋቅር"</string>
@@ -1649,17 +1650,18 @@
     <string name="storage_rename_title" msgid="5911285992205282312">"ማከማቻ ዳግም ሰይም"</string>
     <string name="storage_dialog_unmounted" msgid="1187960789775910051">"ይህ <xliff:g id="NAME_0">^1</xliff:g> ደህንነቱ ሳይነካ ተነቅሏል፣ ነገር ግን አሁንም ይገኛል። \n\nይህንን  <xliff:g id="NAME_1">^1</xliff:g> ለመጠቀም፣ መጀመሪያ ሊገጥሙት ይገባል።"</string>
     <string name="storage_dialog_unmountable" msgid="1761107904296941687">"ይህ <xliff:g id="NAME_0">^1</xliff:g> የተበላሸ ነው። \n\nይህንን <xliff:g id="NAME_1">^1</xliff:g> ለመጠቀም መጀመሪያ ሊያዘጋጁት ይገባል።"</string>
-    <string name="storage_internal_format_details" msgid="8922023528848861812">"ቅርጸት ከሰሩ በኋላ ይህንን  <xliff:g id="NAME_0">^1</xliff:g> በሌሎች መሣሪያዎች ላይ መጠቀም ይችላሉ።  \n\n በዚህ <xliff:g id="NAME_1">^1</xliff:g> ውስጥ ያለ ሁሉም ውሂብ ይሰረዛል።  መጀመሪያ የእሱን ምትኬ ማስቀመጡን ያስቡበት።  \n\n"<b>"የፎቶዎች እና የሌላ ማህደረመረጃ ምትኬ ያስቀምጡ "</b>" \nየማህደረመረጃ ፋይሎችዎን በዚህ መሣሪያ ላይ ወዳለ ተለዋጭ ማከማቻ ይውሰዱ ወይም የዩኤስቢ ገመድ ተጠቅመው ወደ አንድ ኮምፒውተር ያስተላልፏቸው። \n\n"<b>"የመተግበሪያዎች ምትኬን ያስቀምጡ"</b>" \nበዚህ <xliff:g id="NAME_6">^1</xliff:g> ላይ የተቀመጡ መተግበሪያዎች ሁሉ ይራገፉና ውሂባቸው ይሰረዛል። እነዚህን መተግበሪያዎች ለማቆየት በዚህ መሣሪያ ላይ ወዳለ ተለዋጭ ማከማቻ ይውሰዷቸው።"</string>
+    <string name="storage_internal_format_details" msgid="2399034372813686846">"ፎቶዎችን፣ ቪድዮዎችን፣ ሙዚቃን እና ሌሎችንም ለማከማቸት እና በሌሎች መሣሪያዎች ላይ ለመድረስ በዚህ ኤስዲ ካርድ ላይ ቅርጸት መስራት ይችላሉ። \n\n"<b>"በዚህ ኤስዲ ካርድ ላይ ያለ ሁሉም ውሂብ ይደመሰሳል።"</b>" \n\n"<b>"ከቅርጸት በፊት"</b>" \n\n"<b>"የፎቶዎች እና የሌላ ሚዲያ ምትክ ያስቀምጡ"</b>" \nየእርስዎን የሚዲያ ፋይሎች በዚህ መሣሪያ ላይ ወዳለ አማራጭ ማከማቻ ይውሰዱ ወይም የዩኤስቢ ገመድን በመጠቀም ወደ ኮምፒውተር ያስተላልፏቸው። \n\n"<b>"የመተግበሪያዎች ምትክ ያስቀምጡ"</b>" \nበዚህ <xliff:g id="NAME">^1</xliff:g> ላይ የተከማቹ ሁሉም መተግበሪያዎች ይራገፋሉ እና ውሂባቸው ይደመሰሳል። እነዚህን መተግበሪያዎች ለማቆየት በዚህ መሣሪያ ላይ ወዳለ አማራጭ ማከማቻ ይውሰዷቸው።"</string>
     <string name="storage_internal_unmount_details" msgid="487689543322907311"><b>"ይህን <xliff:g id="NAME_0">^1</xliff:g> ሲያስወጡት በእሱ ላይ የተከማቹ መተግበሪያዎች መስራት ያቆማሉ፣ እና ዳግም እስኪገባ ድረስ በእሱ ላይ የተከማቹ የማህደረመረጃ ፋይሎች አይገኙም።"</b>" \n\nይህ <xliff:g id="NAME_1">^1</xliff:g> በዚህ መሣሪያ ላይ ብቻ እንዲሰራ ቅርጸት የተሰራለት ነው። በማናቸውም ሌሎች ላይ አይሰራም።"</string>
     <string name="storage_internal_forget_details" msgid="5606507270046186691">"ይህ <xliff:g id="NAME">^1</xliff:g> የያዛቸውን መተግበሪያዎች፣ ፎትዎች ወይም ውሂብ ለመጠቀም ዳግም ያስገቡት። \n\nእንደ አማራጭም መሣሪያው የሚገኝ ካልሆነ ይህን ማከማቻ ለመርሳት መምረጥ ይችላሉ። \n\nለመርሳት ከመረጡ መሣሪያው የያዘው ውሂብ ሁሉ ለዘለዓለም ይጠፋል። \n\nመተግበሪያዎቹን በኋላ ላይ ዳግም መጫን ይችላሉ፣ ነገር ግን በዚህ መሣሪያ ላይ የተከማቸው ውሂባቸው ይጠፋል።"</string>
     <string name="storage_internal_forget_confirm_title" msgid="379238668153099015">"<xliff:g id="NAME">^1</xliff:g> ረሱ?"</string>
     <string name="storage_internal_forget_confirm" msgid="5752634604952674123">"በዚህ <xliff:g id="NAME">^1</xliff:g> ላይ የተከማቹ ሁሉም መተግሪያዎች፣ ፎቶዎች እና ውሂብ ከናካቴው ይጠፋሉ።"</string>
     <string name="storage_detail_dialog_system" msgid="7461009051858709479">"ስርዓቱ የAndroid ስሪት <xliff:g id="VERSION">%s</xliff:g>ን የሚያሄዱ ፋይሎችን ያካትታል"</string>
+    <string name="storage_wizard_guest" msgid="5813419895687733649">"የእንግዳ ሁነታ ተጠቃሚዎች ኤስዲ ካርዶች ላይ ቅርጸት መስራት አይችሉም"</string>
     <string name="storage_wizard_init_title" msgid="9036374223934708619">"የእርስዎን <xliff:g id="NAME">^1</xliff:g> ያዘጋጁ"</string>
-    <string name="storage_wizard_init_external_title" msgid="6540132491909241713">"እንደ ተንቀሳቃሽ ማከማቻ ይጠቀሙ"</string>
-    <string name="storage_wizard_init_external_summary" msgid="5807552934494462984">"ፎቶዎችን እና ሌላ ማህደረመረጃ በመሣሪያዎች መካከል ለመውሰድ።"</string>
-    <string name="storage_wizard_init_internal_title" msgid="3256355049992147270">"እንደ ውስጣዊ ማከማቻ ይጠቀሙ"</string>
-    <string name="storage_wizard_init_internal_summary" msgid="2283798331883929674">"ማንኛውም ነገር በዚህ መሣሪያ ላይ ብቻ ለማከማቻት፣ መተግበሪያዎችን እና ፎቶዎችንም ጨምሮ። በሌሎች መሣሪያዎች ላይ እንዳይሰራ የሚያግድ ቅርጸት ያስፈልገዋል።"</string>
+    <string name="storage_wizard_init_external_title" msgid="5304499882951772292">"ኤስዲ ካርድን ለተንቀሳቃሽ ማከማቻ ቅርጸት ይስሩበት"</string>
+    <string name="storage_wizard_init_external_summary" msgid="5842588772292324473">"ፎቶዎችን፣ ቪድዮዎችን፣ ሙዚቃን እና ሌሎችንም ያስቀምጡ እና ከሌሎች መሣሪያዎች ሆነው ይድረሷቸው"</string>
+    <string name="storage_wizard_init_internal_title" msgid="8799676990387869411">"ኤስዲ ካርድን ለውስጣዊ ማህደረ ትውስታ ቅርጸት ይስሩበት"</string>
+    <string name="storage_wizard_init_internal_summary" msgid="8224648610422581704">"በዚህ ስልክ ላይ ብቻ ለመጠቀም መተግበሪያዎችን እና ሚዲያን አስቀምጥ"</string>
     <string name="storage_wizard_format_confirm_title" msgid="4898014527956178762">"እንደ ውስጣዊ ማከማቻ አድርገው ቅርጸት ይስሩ"</string>
     <string name="storage_wizard_format_confirm_body" msgid="5514665245241830772">"ደህንነቱ የተጠበቀ እንዲሆን ይሄ <xliff:g id="NAME_0">^1</xliff:g> ቅርጸት እንዲሰራለት ይፈልጋል። \n\nቅርጸት ከተሰራ በኋላ ይሄ <xliff:g id="NAME_1">^1</xliff:g> በዚህ መሣሪያ ላይ ብቻ ነው የሚሰራው። \n\n"<b>"ቅርጸት መስራት አሁን በ<xliff:g id="NAME_2">^1</xliff:g> ላይ የተከማቸውን ውሂብ ሁሉ ይደመስሳል።"</b>" ውሂብ እንዳይጠፋ ለመከላከል የእሱን ምትኬ መስራት ያስቡበት።"</string>
     <string name="storage_wizard_format_confirm_public_title" msgid="649252654496577680">"እንደ ተንቀሳቃሽ ማከማቻ አድርገው ቅርጸት ይስሩበት"</string>
@@ -1676,9 +1678,9 @@
     <string name="storage_wizard_migrate_confirm_next" msgid="217478540562501692">"ውሰድ"</string>
     <string name="storage_wizard_migrate_progress_title" msgid="462238335086734131">"ውሂብን በመውሰድ ላይ…"</string>
     <string name="storage_wizard_migrate_details" msgid="7474061662976940407">"በሚወሰድበት ጊዜ፦ \n• <xliff:g id="NAME">^1</xliff:g>ን አያስወግዱ። \n• አንዳንድ መተግበሪያዎች በአግባቡ አይሰሩም። \n• የመሣሪያው ባትሪ ኃይል እንደተሞላ ያቆዩት።"</string>
-    <string name="storage_wizard_ready_title" msgid="3093468548660255543">"የእርስዎ <xliff:g id="NAME">^1</xliff:g> ለመጠቀም ዝግጁ ነው"</string>
-    <string name="storage_wizard_ready_external_body" msgid="45040717412844114">"የእርስዎ <xliff:g id="NAME">^1</xliff:g> ከፎቶዎች እና ሌሎች ማህደረመረጃ ጋር አብሮ ለመጠቀም ዝግጁ ነው።"</string>
-    <string name="storage_wizard_ready_internal_body" msgid="7734817996475607447">"የእርስዎ አዲስ <xliff:g id="NAME">^1</xliff:g> እየሰራ ነው። \n\nፎቶዎችን፣ ፋይሎችን እና የመተግበሪያ ውሂብን ወደዚህ መሣሪያ ለመውሰድ ወደ ቅንብሮች &gt; ማከማቻ ይሂዱ።"</string>
+    <string name="storage_wizard_ready_title" msgid="3631022511474086605">"<xliff:g id="NAME">^1</xliff:g> ላይ ቅርጸት ተሰርቷል"</string>
+    <string name="storage_wizard_ready_external_body" msgid="4264787122605706421">"የእርስዎን <xliff:g id="NAME">^1</xliff:g> መጠቀም መጀመር ይችላሉ"</string>
+    <string name="storage_wizard_ready_internal_body" msgid="2416472979690681273">"የእርስዎን <xliff:g id="NAME">^1</xliff:g> መጠቀም መጀመር ይችላሉ"</string>
     <string name="storage_wizard_move_confirm_title" msgid="6812469630804101590">"<xliff:g id="APP">^1</xliff:g>ን ይውሰዱ"</string>
     <string name="storage_wizard_move_confirm_body" msgid="1713022828842263574">"<xliff:g id="APP">^1</xliff:g>ን እና ውሂቡን ወደ <xliff:g id="NAME_0">^2</xliff:g> መውሰድ ጥቂት ጊዜ ብቻ ነው የሚወስደው። መውሰዱ እስኪጠናቀቅ ድረስ መተግበሪያውን መጠቀም አይችሉም። \n\nበሚወሰድበት ጊዜ <xliff:g id="NAME_1">^2</xliff:g>ን አያስወግዱት።"</string>
     <string name="storage_wizard_move_unlock" msgid="14651384927767749">"ውሂብን ለመውሰድ ተጠቃሚ <xliff:g id="APP">^1</xliff:g>ን መክፈት ይኖርብዎታል።"</string>
@@ -1687,19 +1689,20 @@
     <string name="storage_wizard_move_progress_cancel" msgid="3494022998599718937">"መውሰድን ሰርዝ"</string>
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"ይህ <xliff:g id="NAME_0">^1</xliff:g> ዝግምተኛ መስሎ ይታያል። \n\nመቀጠል ይችላሉ፣ ነገር ግን ወደዚህ አካባቢ የተንቀሳቀሱ መተግበሪያዎች ሊንተባተቡ እና የውሂብ ሽግግር ረዥም ጊዜ ሊወስድ ይችል ይሆናል። \n\nለተሻለ የስራ አፈጻጸም ፍጥነት ያለው <xliff:g id="NAME_1">^1</xliff:g> መጠቀምን ከግምት ያስገቡ።"</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"ይህን <xliff:g id="NAME">^1</xliff:g> እንዴት ይጠቀሙበታል?"</string>
-    <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="1884468440013151482">"ለትርፍ የጡባዊ ማከማቻ ተጠቀም"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="2907833056467441047">"በዚህ ጡባዊ ላይ ብቻ ለመተግበሪያዎች፣ ፋይሎች እና ማህደረ መረጃ"</string>
-    <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="3278694259614995649">"የጡባዊ ማከማቻ"</string>
-    <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5941952998075252284">"ለትርፍ የስልክ ማከማቻ ተጠቀም"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3022584310096954875">"በዚህ ስልክ ላይ ብቻ ለመተግበሪያዎች፣ ፋይሎች እና ማህደረ መረጃ"</string>
-    <string name="storage_wizard_init_v2_internal_action" product="default" msgid="5645732875040797464">"የስልክ ማከማቻ"</string>
+    <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"ኤስዲ ካርድን ለውስጣዊ ማህደረ ትውስታ ቅርጸት ይስሩበት"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"በዚህ ጡባዊ ላይ ብቻ ለመጠቀም መተግበሪያዎችን እና ሚዲያን ያከማቹ። &lt;a href=https://support.google.com/android/answer/12153449&gt;አንድ ኤስዲ ካርድን ስለማቀናበር የበለጠ ይወቁ&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"ቅርጸት"</string>
+    <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"ኤስዲ ካርድን ለውስጣዊ ማህደረ ትውስታ ቅርጸት ይስሩበት"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"በዚህ ስልክ ላይ ብቻ ለመጠቀም መተግበሪያዎችን እና ሚዲያን ያስቀምጡ። &lt;a href=https://support.google.com/android/answer/12153449&gt;አንድ ኤስዲ ካርድን ስለማቀናበር የበለጠ ይወቁ&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"ቅርጸት"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"ወይም"</string>
-    <string name="storage_wizard_init_v2_external_title" msgid="8129096036551264207">"ለተንቀሳቃሽ ማከማቻ ተጠቀም"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="6436419488235871823">"በመሣሪያዎች መካከል ፋይሎችን እና ማህደረ መረጃ ለማስተላለፍ"</string>
-    <string name="storage_wizard_init_v2_external_action" msgid="781928899530539860">"ተንቀሳቃሽ ማከማቻ"</string>
+    <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"ኤስዲ ካርድን ለተንቀሳቃሽ ማከማቻ ቅርጸት ይስሩበት"</string>
+    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"ፎቶዎችን፣ ቪድዮዎችን፣ ሙዚቃን እና ሌሎችንም ያከማቹ እና ከሌሎች መሣሪያዎች ሆነው ይድረሷቸው። &lt;a href=https://support.google.com/android/answer/12153449&gt;አንድ ኤስዲ ካርድን ስለማቀናበር የበለጠ ይወቁ&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"ቅርጸት"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"በኋላ ያዋቅሩ"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"ይህ <xliff:g id="NAME">^1</xliff:g> ይቀረጽ?"</string>
     <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"ይህ <xliff:g id="NAME_0">^1</xliff:g> መተግበሪያዎችን፣ ፋይሎችን እና ማህደረ መረጃን ለማከማቸት መቀረጽ ያስፈልገዋል። \n\nቀረጻ በ<xliff:g id="NAME_1">^2</xliff:g> ላይ አሁን ያለውን ይዘት ይደመስሳል። ይዘት እንዳይጠፋ ለማድረግ፣ ወደ ሌላ <xliff:g id="NAME_2">^3</xliff:g> ወይም መሣሪያ በምትኬ ያስቀምጡት።"</string>
+    <string name="storage_wizard_format_confirm_v2_body_external" msgid="5810296966099830035">"ይህ <xliff:g id="NAME_0">^1</xliff:g> ፎቶዎችን፣ ቪድዮዎችን፣ ሙዚቃን እና ሌሎችንም ለማከማቸት ቅርጸት መሰራት አለበት። \n\nቅርጸት መስራት ማንኛውንም ነባር ይዘት ይደመስሳል<xliff:g id="NAME_1">^2</xliff:g>። ይዘት ማጣትን ለማስቀረት ምትኬውን በሌላ <xliff:g id="NAME_2">^3</xliff:g> ወይም መሣሪያ ላይ ያስቀምጡለት።"</string>
     <string name="storage_wizard_format_confirm_v2_action" msgid="5718254101386377126">"ቅርጸት <xliff:g id="NAME">^1</xliff:g>"</string>
     <string name="storage_wizard_migrate_v2_title" msgid="3471564531564756698">"ይዘት ወደ <xliff:g id="NAME">^1</xliff:g> ይንቀሳቀስ?"</string>
     <string name="storage_wizard_migrate_v2_body" product="tablet" msgid="4541523202790415721">"ፋይሎችን፣ ማህደረ መረጃን እና የተወሰኑ መተግበሪያዎችን ወደዚህ <xliff:g id="NAME">^1</xliff:g> ማንቀሳቀስ ይችላሉ። \n\nይህ እንቅስቃሴ ከእርስዎ ጡባዊ ማከማቻ <xliff:g id="SIZE">^2</xliff:g> ነጻ ያደርጋል እና ወደ <xliff:g id="DURATION">^3</xliff:g> ገደማ መውሰድ አለበት።"</string>
@@ -1716,9 +1719,9 @@
     <string name="storage_wizard_slow_v2_body" msgid="7604252106419016929">"አሁንም ድረስ ይህን <xliff:g id="NAME_0">^1</xliff:g> መጠቀም ይችላሉ ሆኖም ግን ዝግተኛ ሊሆን ይችላል። \n\nበዚህ <xliff:g id="NAME_1">^2</xliff:g> ላይ የተከማቹ መተግበሪያዎች በአግባቡ ላይሠሩ ይችሉ ይሆናል እንዲሁም የይዘት ትልልፎች ረዥም ጊዜ ሊወስዱ ይችሉ ይሆናል። \n\nይበልጥ ፈጣን የሆነ <xliff:g id="NAME_2">^3</xliff:g> ለመጠቀም ይሞክሩ ወይም ይህን <xliff:g id="NAME_3">^4</xliff:g> ለተንቀሳቃሽ ማከማቻነት በምትኩ ይጠቀሙ።"</string>
     <string name="storage_wizard_slow_v2_start_over" msgid="1806852287668077536">"እንደገና ጀምር"</string>
     <string name="storage_wizard_slow_v2_continue" msgid="7469713755893007901">"ቀጥል"</string>
-    <string name="storage_wizard_ready_v2_external_body" msgid="3896836008684280905">"ይዘትን ወደ <xliff:g id="NAME">^1</xliff:g> ማንቀሳቀስ ይችላሉ"</string>
-    <string name="storage_wizard_ready_v2_internal_body" msgid="5710665992219332454">"ይዘትን ወደ <xliff:g id="NAME">^1</xliff:g> ለማንቀሳቀስ ወደ "<b>"ቅንብሮች &gt; ማከማቻ"</b>" ይሂዱ"</string>
-    <string name="storage_wizard_ready_v2_internal_moved_body" msgid="1269878056598666852">"የእርስዎ ይዘት ወደ <xliff:g id="NAME_0">^1</xliff:g> ተንቀሳቅሷል። \n\nይህን <xliff:g id="NAME_1">^2</xliff:g> ለማስተዳደር ወደ "<b>"ቅንብሮች &gt; ማከማቻ"</b>" ይሂዱ።"</string>
+    <string name="storage_wizard_ready_v2_external_body" msgid="7688457485389886923">"የእርስዎን <xliff:g id="NAME">^1</xliff:g> መጠቀም መጀመር ይችላሉ"</string>
+    <string name="storage_wizard_ready_v2_internal_body" msgid="3520269956641115883">"የእርስዎን <xliff:g id="NAME">^1</xliff:g> መጠቀም መጀመር ይችላሉ"</string>
+    <string name="storage_wizard_ready_v2_internal_moved_body" msgid="1163588718127651062">"የእርስዎን <xliff:g id="NAME">^1</xliff:g> መጠቀም መጀመር ይችላሉ"</string>
     <string name="battery_status_title" msgid="4661768220545945771">"የባትሪሁኔታ"</string>
     <string name="battery_level_title" msgid="1371765298786083448">"የባትሪደረጃ፡"</string>
     <string name="apn_settings" msgid="4295467389400441299">"APNs"</string>
@@ -2996,6 +2999,10 @@
     <string name="battery_usage_screen_footer" msgid="7899907241146636817">"የባትሪ አጠቃቀም ውሂብ ግምታዊ ነው እና ስልክ ኃይል በሚሞላበት ጊዜ አጠቃቀምን አይለካም"</string>
     <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"ስልክዎን ለጥቂት ሰዓቶች ከተጠቀሙ በኋላ የባትሪ አጠቃቀም ውሂብ ይገኛል"</string>
     <string name="battery_usage_chart" msgid="4114747521432440017">"የባትሪ አጠቃቀም ገበታ"</string>
+    <!-- no translation found for daily_battery_usage_chart (4176059567682992686) -->
+    <skip />
+    <!-- no translation found for hourly_battery_usage_chart (3098314511076561272) -->
+    <skip />
     <string name="process_stats_summary_title" msgid="502683176231281732">"የሂደት ስታትስቲክስ"</string>
     <string name="process_stats_summary" msgid="522842188571764699">"እያሄዱ ስላሉ ሂደቶች ያሉ ዝርዝር ስታትስቲክስ"</string>
     <string name="app_memory_use" msgid="7559666138324410666">"የማህደረ ትውስታ አጠቃቀም"</string>
@@ -3551,6 +3558,8 @@
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"መተግበሪያዎች የአካባቢ መረጃዎትን እንዲጠቀሙ ይፍቀዱ"</string>
     <string name="wizard_back" msgid="8257697435061870191">"ተመለስ"</string>
     <string name="wizard_next" msgid="3884832431439072471">"ቀጣይ"</string>
+    <string name="wizard_back_portable" msgid="5315939180781404882">"ወደ ተንቀሳቃሽ ቀይር"</string>
+    <string name="wizard_back_adoptable" msgid="1447814356855134183">"በሌላ መንገድ ቅርጸት ስራ"</string>
     <string name="wizard_finish" msgid="4220258401946825946">"ተጠናቅቋል"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_setup_wizard_title" msgid="3945520353564138219">"ሲም ካርዶች"</string>
@@ -5611,6 +5620,10 @@
     <string name="media_controls_title" msgid="403271085636252597">"ሚዲያ"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"ሚዲያ ማጫወቻ ይሰኩ"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"መልሶ ማጫዎትን በፍጥነት ካቆሙበት ለመቀጠል ሚዲያ ማጫወቻን በፈጣን ቅንብሮች ውስጥ ክፍት ሆኖ ይቆያል"</string>
+    <!-- no translation found for media_controls_lockscreen_title (2188311721857512510) -->
+    <skip />
+    <!-- no translation found for media_controls_lockscreen_description (3320333660404439510) -->
+    <skip />
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"የሚዲያ ምክሮችን አሳይ"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"በእርስዎ እንቅስቃሴ ላይ በመመስረት"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"ተጫዋች ደብቅ"</string>
