--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -1619,9 +1619,10 @@
     <string name="storage_menu_rename" msgid="8549835371429159336">"Ümbernimetamine"</string>
     <string name="storage_menu_mount" msgid="4760531872302820569">"Ühendamine"</string>
     <string name="storage_menu_unmount" msgid="8171552487742912282">"Eemaldamine"</string>
-    <string name="storage_menu_format" msgid="5454870642788909443">"Vormindamine"</string>
+    <string name="storage_menu_format" msgid="8903698999905354146">"SD-kaardi teisald. salvestusruumiks vormindamine"</string>
+    <string name="storage_menu_format_button" msgid="7623565190643699626">"Vorminda kaart"</string>
     <string name="storage_menu_format_public" msgid="5567214442727034630">"Vormindamine kaasaskantavana"</string>
-    <string name="storage_menu_format_private" msgid="3208326980027382079">"Vormindamine sisemisena"</string>
+    <string name="storage_menu_format_option" msgid="4886059624052908432">"Vorminda"</string>
     <string name="storage_menu_migrate" msgid="2196088149560070193">"Andmete üleviimine"</string>
     <string name="storage_menu_forget" msgid="5154017890033638936">"Unustamine"</string>
     <string name="storage_menu_set_up" msgid="4401074025612064744">"Seadistus"</string>
@@ -1651,17 +1652,18 @@
     <string name="storage_rename_title" msgid="5911285992205282312">"Salvestusruumi ümbernimetamine"</string>
     <string name="storage_dialog_unmounted" msgid="1187960789775910051">"Üksus <xliff:g id="NAME_0">^1</xliff:g> väljutati turvaliselt, kuid see on endiselt saadaval. \n\nÜksuse <xliff:g id="NAME_1">^1</xliff:g> kasutamiseks peate selle esmalt ühendama."</string>
     <string name="storage_dialog_unmountable" msgid="1761107904296941687">"Üksus <xliff:g id="NAME_0">^1</xliff:g> on rikutud. \n\nÜksuse <xliff:g id="NAME_1">^1</xliff:g> kasutamiseks peate selle esmalt seadistama."</string>
-    <string name="storage_internal_format_details" msgid="8922023528848861812">"Pärast vormindamist saate üksust <xliff:g id="NAME_0">^1</xliff:g> kasutada teistes seadmetes. \n\nKõik üksuses <xliff:g id="NAME_1">^1</xliff:g> olevad andmed kustutatakse. Kaaluge esmalt nende varundamist. \n\n"<b>"Fotode ja muu meedia varundamine"</b>" \nTeisaldage oma meediafailid selle seadme teise salvestusruumi või kandke need USB-kaabli abil üle arvutisse. \n\n"<b>"Rakenduste varundamine"</b>" \nKõik üksusesse <xliff:g id="NAME_6">^1</xliff:g> salvestatud rakendused desinstallitakse ja nende andmed kustutatakse. Nende rakenduste säilitamiseks teisaldage need selle seadme teise salvestusruumi."</string>
+    <string name="storage_internal_format_details" msgid="2399034372813686846">"Võite selle SD-kaardi vormindada, et salvestada fotosid, videoid, muusikat ja muud ning nendele teistes seadmetes juurde pääseda. \n\n"<b>"Kõik sellel SD-kaardil olevad andmed kustutatakse."</b>" \n\n"<b>"Enne vormindamist"</b>" \n\n"<b>"Varundage fotod ja muu meedia"</b>" \nTeisaldage oma meediafailid selle seadme muule salvestusruumile või kandke need USB-kaabli abil üle arvutisse. \n\n"<b>"Varundage rakendused"</b>" \n Kõik sellele meediumile (<xliff:g id="NAME">^1</xliff:g>) salvestatud rakendused desinstallitakse ja nende andmed kustutatakse. Rakenduste alleshoidmiseks teisaldage need selle seadme muule salvestusruumile."</string>
     <string name="storage_internal_unmount_details" msgid="487689543322907311"><b>"Kui üksuse <xliff:g id="NAME_0">^1</xliff:g> eemaldate, lõpetavad sellesse salvestatud rakendused töö ja selles olevad meediafailid pole saadaval, kuni selle uuesti sisestate."</b>\n\n"Üksus <xliff:g id="NAME_1">^1</xliff:g> on vormindatud ainult selles seadmes töötamiseks. See ei tööta teistes seadmetes."</string>
     <string name="storage_internal_forget_details" msgid="5606507270046186691">"Seadmes <xliff:g id="NAME">^1</xliff:g> olevate rakenduste, fotode või andmete kasutamiseks sisestage see uuesti. \n\nKui seade pole saadaval, võite selle salvestusruumi ka unustada. \n\nKui otsustate selle unustada, kaotate kõik seadmes olevad andmed jäädavalt. \n\nSaate rakendused hiljem uuesti installida, kuid nende sellesse seadmesse salvestatud andmed lähevad kaotsi."</string>
     <string name="storage_internal_forget_confirm_title" msgid="379238668153099015">"Kas unustada <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_internal_forget_confirm" msgid="5752634604952674123">"Kõik üksusele <xliff:g id="NAME">^1</xliff:g> salvestatud rakendused, fotod ja andmed kaovad jäädavalt."</string>
     <string name="storage_detail_dialog_system" msgid="7461009051858709479">"Jaotis Süsteem hõlmab Androidi versiooni <xliff:g id="VERSION">%s</xliff:g> käitamiseks vajalikke faile"</string>
+    <string name="storage_wizard_guest" msgid="5813419895687733649">"Külalisrež. kasutajad ei saa SD-kaarte vormindada"</string>
     <string name="storage_wizard_init_title" msgid="9036374223934708619">"Seadista üksus <xliff:g id="NAME">^1</xliff:g>"</string>
-    <string name="storage_wizard_init_external_title" msgid="6540132491909241713">"Kasuta kaasaskantava salvestusruumina"</string>
-    <string name="storage_wizard_init_external_summary" msgid="5807552934494462984">"Fotode ja muu meedia teisaldamiseks seadmete vahel."</string>
-    <string name="storage_wizard_init_internal_title" msgid="3256355049992147270">"Kasuta sisemise salvestusruumina"</string>
-    <string name="storage_wizard_init_internal_summary" msgid="2283798331883929674">"Üksuste (sh rakendused ja fotod) ainult sellesse seadmesse salvestamiseks. Vajalik on vormindamine, mis takistab selle töötamist teistes seadmetes."</string>
+    <string name="storage_wizard_init_external_title" msgid="5304499882951772292">"Vorminda SD-kaart teisaldatavaks salvestusruumiks"</string>
+    <string name="storage_wizard_init_external_summary" msgid="5842588772292324473">"Salvestage fotosid, videoid, muusikat ja muud ning pääsege nendele muudes seadmetes juurde"</string>
+    <string name="storage_wizard_init_internal_title" msgid="8799676990387869411">"Vorminda SD-kaart sisemiseks salvestusruumiks"</string>
+    <string name="storage_wizard_init_internal_summary" msgid="8224648610422581704">"Salvestage rakendusi ja meediat vaid selles telefonis kasutamiseks"</string>
     <string name="storage_wizard_format_confirm_title" msgid="4898014527956178762">"Vorminda sisem. salvestusruumina"</string>
     <string name="storage_wizard_format_confirm_body" msgid="5514665245241830772">"Üksuse <xliff:g id="NAME_0">^1</xliff:g> turvaliseks muutmiseks tuleb see vormindada. \n\nPärast vormindamist töötab üksus <xliff:g id="NAME_1">^1</xliff:g> ainult selles seadmes. \n\n"<b>"Vormindamisel kustutatakse kõik praegu üksusesse <xliff:g id="NAME_2">^1</xliff:g> salvestatud andmed."</b>" Andmete kaotamise vältimiseks kaaluge nende varundamist."</string>
     <string name="storage_wizard_format_confirm_public_title" msgid="649252654496577680">"Vorm. kaasask. salvestusruumina"</string>
@@ -1678,9 +1680,9 @@
     <string name="storage_wizard_migrate_confirm_next" msgid="217478540562501692">"Teisalda"</string>
     <string name="storage_wizard_migrate_progress_title" msgid="462238335086734131">"Andmete teisaldamine …"</string>
     <string name="storage_wizard_migrate_details" msgid="7474061662976940407">"Teisaldamise ajal: \n• ärge eemaldage üksust <xliff:g id="NAME">^1</xliff:g>; \n• ei tööta mõned rakendused korralikult; \n• hoidke seadet laetuna."</string>
-    <string name="storage_wizard_ready_title" msgid="3093468548660255543">"Seade <xliff:g id="NAME">^1</xliff:g> on kasutamiseks valmis"</string>
-    <string name="storage_wizard_ready_external_body" msgid="45040717412844114">"Üksus <xliff:g id="NAME">^1</xliff:g> on valmis fotode ja muu meediaga kasutamiseks."</string>
-    <string name="storage_wizard_ready_internal_body" msgid="7734817996475607447">"Uus üksus <xliff:g id="NAME">^1</xliff:g> töötab. \n\nFotode, failide ja rakenduse andmete teisaldamiseks seadmesse avage menüü Seaded &gt; Salvestusruum."</string>
+    <string name="storage_wizard_ready_title" msgid="3631022511474086605">"<xliff:g id="NAME">^1</xliff:g> on vormindatud"</string>
+    <string name="storage_wizard_ready_external_body" msgid="4264787122605706421">"<xliff:g id="NAME">^1</xliff:g> on kasutamiseks valmis"</string>
+    <string name="storage_wizard_ready_internal_body" msgid="2416472979690681273">"<xliff:g id="NAME">^1</xliff:g> on kasutamiseks valmis"</string>
     <string name="storage_wizard_move_confirm_title" msgid="6812469630804101590">"Teisalda rakendus <xliff:g id="APP">^1</xliff:g>"</string>
     <string name="storage_wizard_move_confirm_body" msgid="1713022828842263574">"Rakenduse <xliff:g id="APP">^1</xliff:g> ja selle andmete teisaldamine üksusesse <xliff:g id="NAME_0">^2</xliff:g> võtab vaid mõne hetke. Te ei saa rakendust kasutada enne, kui teisaldamine on lõpetatud. \n\nTeisaldamise ajal ärge eemaldage üksust <xliff:g id="NAME_1">^2</xliff:g>."</string>
     <string name="storage_wizard_move_unlock" msgid="14651384927767749">"Andmete teisaldamiseks peate avama kasutaja <xliff:g id="APP">^1</xliff:g>."</string>
@@ -1689,19 +1691,20 @@
     <string name="storage_wizard_move_progress_cancel" msgid="3494022998599718937">"Tühista teisaldamine"</string>
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Üksus <xliff:g id="NAME_0">^1</xliff:g> näib olevat aeglane. \n\nSaate jätkata, kuid sellesse asukohta teisaldatud rakendused võivad töötada katkendlikult ja andmete ülekandmine võib võtta kaua aega. \n\nParema toimivuse saavutamiseks kaaluge kiirema üksuse <xliff:g id="NAME_1">^1</xliff:g> kasutamist."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Kuidas seadet <xliff:g id="NAME">^1</xliff:g> kasutate?"</string>
-    <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="1884468440013151482">"Kasuta tahvelar. lisasalvestusr."</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="2907833056467441047">"Ainult selles tahvelarv. olevate raken., failide ja meedia jaoks"</string>
-    <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="3278694259614995649">"Tahvelarvuti salvestusruum"</string>
-    <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5941952998075252284">"Kasuta telefoni lisasalvestusr."</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3022584310096954875">"Ainult selles telef. olevate rakenduste, failide ja meedia jaoks"</string>
-    <string name="storage_wizard_init_v2_internal_action" product="default" msgid="5645732875040797464">"Telefoni salvestusruum"</string>
+    <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"SD-kaardi sisemiseks salvestusruumiks vormindamine"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Salvestage rakendusi ja meediat vaid selles tahvelarvutis kasutamiseks. &lt;a href=https://support.google.com/android/answer/12153449&gt;Lisateave SD-kaardi seadistamise kohta&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Vorminda"</string>
+    <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"SD-kaardi sisemiseks salvestusruumiks vormindamine"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Salvestage rakendusi ja meediat vaid selles telefonis kasutamiseks. &lt;a href=https://support.google.com/android/answer/12153449&gt;Lisateave SD-kaardi seadistamise kohta&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Vorminda"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Või"</string>
-    <string name="storage_wizard_init_v2_external_title" msgid="8129096036551264207">"Kasuta kaasask. salv.ruumi jaoks"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="6436419488235871823">"Failide ja meedia edastamiseks seadmete vahel"</string>
-    <string name="storage_wizard_init_v2_external_action" msgid="781928899530539860">"Kaasaskantav salvestusruum"</string>
+    <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"SD-kaardi teisald. salvestusruumiks vormindamine"</string>
+    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Salvestage fotosid, videoid, muusikat ja muud ning pääsege nendele teistes seadmetes juurde. &lt;a href=https://support.google.com/android/answer/12153449&gt;Lisateave SD-kaardi seadistamise kohta&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Vorminda"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Seadista hiljem"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Kas vormindada seade <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"Seade <xliff:g id="NAME_0">^1</xliff:g> tuleb vormindada, et rakendusi, faile ja meediat salvestada. \n\nVormindamisel kustutatakse kogu seadmes <xliff:g id="NAME_1">^2</xliff:g> olev sisu. Sisu kaotsimineku vältimiseks varundage see teise salvestusseadmesse <xliff:g id="NAME_2">^3</xliff:g> või mõnda muusse seadmesse."</string>
+    <string name="storage_wizard_format_confirm_v2_body_external" msgid="5810296966099830035">"<xliff:g id="NAME_0">^1</xliff:g> tuleb fotode, videote, muusika ja muu salvestamiseks vormindada. \n\nVormindamisega kustutatakse meediumil <xliff:g id="NAME_1">^2</xliff:g> olemasolev sisu. Sisu kaotsimineku vältimiseks varundage see teisele meediumile (näiteks <xliff:g id="NAME_2">^3</xliff:g>) või mõnda muusse seadmesse."</string>
     <string name="storage_wizard_format_confirm_v2_action" msgid="5718254101386377126">"Vorminda seade <xliff:g id="NAME">^1</xliff:g>"</string>
     <string name="storage_wizard_migrate_v2_title" msgid="3471564531564756698">"Kas teisaldada sisu seadmesse <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_migrate_v2_body" product="tablet" msgid="4541523202790415721">"Failid, meedia ja teatud rakendused saab teisaldada seadmesse <xliff:g id="NAME">^1</xliff:g>. \n\nSellega vabastatakse <xliff:g id="SIZE">^2</xliff:g> teie tahvelarvuti salvestusruumist ja see võib võtta umbes <xliff:g id="DURATION">^3</xliff:g>."</string>
@@ -1718,9 +1721,9 @@
     <string name="storage_wizard_slow_v2_body" msgid="7604252106419016929">"Võite seadet <xliff:g id="NAME_0">^1</xliff:g> siiski kasutada, kuid see võib olla aeglane. \n\nSeadmesse <xliff:g id="NAME_1">^2</xliff:g> salvestatud rakendused ei pruugi õigesti töötada ja sisu teisaldamine võib kaua aega võtta. \n\nKasutage kiiremat seadet <xliff:g id="NAME_2">^3</xliff:g> või selle asemel seda seadet <xliff:g id="NAME_3">^4</xliff:g> kaasaskantava salvestusruumina."</string>
     <string name="storage_wizard_slow_v2_start_over" msgid="1806852287668077536">"Alusta uuesti"</string>
     <string name="storage_wizard_slow_v2_continue" msgid="7469713755893007901">"Jätka"</string>
-    <string name="storage_wizard_ready_v2_external_body" msgid="3896836008684280905">"Sisu saab teisaldada seadmesse <xliff:g id="NAME">^1</xliff:g>"</string>
-    <string name="storage_wizard_ready_v2_internal_body" msgid="5710665992219332454">"Sisu teisaldamiseks seadmesse <xliff:g id="NAME">^1</xliff:g> tehke valikud "<b>"Seaded &gt; Salvestusruum"</b></string>
-    <string name="storage_wizard_ready_v2_internal_moved_body" msgid="1269878056598666852">"Sisu teisaldati seadmesse <xliff:g id="NAME_0">^1</xliff:g>. \n\nSeadme <xliff:g id="NAME_1">^2</xliff:g> haldamiseks tehke valikud "<b>"Seaded &gt; Salvestusruum"</b>"."</string>
+    <string name="storage_wizard_ready_v2_external_body" msgid="7688457485389886923">"<xliff:g id="NAME">^1</xliff:g> on kasutamiseks valmis"</string>
+    <string name="storage_wizard_ready_v2_internal_body" msgid="3520269956641115883">"<xliff:g id="NAME">^1</xliff:g> on kasutamiseks valmis"</string>
+    <string name="storage_wizard_ready_v2_internal_moved_body" msgid="1163588718127651062">"<xliff:g id="NAME">^1</xliff:g> on kasutamiseks valmis"</string>
     <string name="battery_status_title" msgid="4661768220545945771">"Aku olek"</string>
     <string name="battery_level_title" msgid="1371765298786083448">"Aku tase"</string>
     <string name="apn_settings" msgid="4295467389400441299">"Pääsupunktid (APN-id)"</string>
@@ -2998,6 +3001,10 @@
     <string name="battery_usage_screen_footer" msgid="7899907241146636817">"Akukasutuse andmed on ligikaudsed ja kasutamist ei mõõdeta telefoni laadimise ajal"</string>
     <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"Aku kasutuse andmed on näha siis, kui olete telefoni mõni tund kasutanud"</string>
     <string name="battery_usage_chart" msgid="4114747521432440017">"Akukasutuse diagramm"</string>
+    <!-- no translation found for daily_battery_usage_chart (4176059567682992686) -->
+    <skip />
+    <!-- no translation found for hourly_battery_usage_chart (3098314511076561272) -->
+    <skip />
     <string name="process_stats_summary_title" msgid="502683176231281732">"Protsessi statistika"</string>
     <string name="process_stats_summary" msgid="522842188571764699">"Tehnilised üksikasjad protsesside käitamise kohta"</string>
     <string name="app_memory_use" msgid="7559666138324410666">"Mälu kasutamine"</string>
@@ -3553,6 +3560,8 @@
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Rakendustel asukohateabe kasutamise lubamine"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Tagasi"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Järgmine"</string>
+    <string name="wizard_back_portable" msgid="5315939180781404882">"Vaheta teisaldatavale"</string>
+    <string name="wizard_back_adoptable" msgid="1447814356855134183">"Muul viisil vormindamine"</string>
     <string name="wizard_finish" msgid="4220258401946825946">"Lõpeta"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_setup_wizard_title" msgid="3945520353564138219">"SIM-kaardid"</string>
@@ -5613,6 +5622,10 @@
     <string name="media_controls_title" msgid="403271085636252597">"Meedia"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Meediapleieri kinnitamine"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Kiirelt taasesituse jätkamiseks jääb meediapleier kiirseadetes avatuks"</string>
+    <!-- no translation found for media_controls_lockscreen_title (2188311721857512510) -->
+    <skip />
+    <!-- no translation found for media_controls_lockscreen_description (3320333660404439510) -->
+    <skip />
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"Kuva meediasoovitusi"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"Teie tegevuse põhjal"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"Peida pleier"</string>
