--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -1617,9 +1617,10 @@
     <string name="storage_menu_rename" msgid="8549835371429159336">"Ganti nama"</string>
     <string name="storage_menu_mount" msgid="4760531872302820569">"Pasang"</string>
     <string name="storage_menu_unmount" msgid="8171552487742912282">"Cabut"</string>
-    <string name="storage_menu_format" msgid="5454870642788909443">"Format"</string>
+    <string name="storage_menu_format" msgid="8903698999905354146">"Format kartu SD untuk penyimpanan portabel"</string>
+    <string name="storage_menu_format_button" msgid="7623565190643699626">"Format kartu"</string>
     <string name="storage_menu_format_public" msgid="5567214442727034630">"Format sebagai portabel"</string>
-    <string name="storage_menu_format_private" msgid="3208326980027382079">"Format sebagai internal"</string>
+    <string name="storage_menu_format_option" msgid="4886059624052908432">"Format"</string>
     <string name="storage_menu_migrate" msgid="2196088149560070193">"Migrasikan data"</string>
     <string name="storage_menu_forget" msgid="5154017890033638936">"Lupakan"</string>
     <string name="storage_menu_set_up" msgid="4401074025612064744">"Siapkan"</string>
@@ -1649,17 +1650,18 @@
     <string name="storage_rename_title" msgid="5911285992205282312">"Ganti nama penyimpanan"</string>
     <string name="storage_dialog_unmounted" msgid="1187960789775910051">"<xliff:g id="NAME_0">^1</xliff:g> ini dikeluarkan dengan aman, tetapi masih ada. \n\nUntuk menggunakan <xliff:g id="NAME_1">^1</xliff:g> ini, Anda harus memasangnya terlebih dahulu."</string>
     <string name="storage_dialog_unmountable" msgid="1761107904296941687">"<xliff:g id="NAME_0">^1</xliff:g> ini rusak. \n\nUntuk menggunakan <xliff:g id="NAME_1">^1</xliff:g> ini, Anda harus menyiapkannya terlebih dahulu."</string>
-    <string name="storage_internal_format_details" msgid="8922023528848861812">"Setelah memformat, Anda dapat menggunakan <xliff:g id="NAME_0">^1</xliff:g> ini di perangkat lain. \n\nSemua data di <xliff:g id="NAME_1">^1</xliff:g> ini akan dihapus. Pertimbangkan untuk melakukan pencadangan terlebih dahulu. \n\n"<b>"Cadangkan foto &amp; media lain"</b>" \nPindahkan file media ke penyimpanan alternatif di perangkat ini, atau transfer ke komputer menggunakan kabel USB. \n\n"<b>"Cadangkan aplikasi"</b>" \nSemua aplikasi yang disimpan di <xliff:g id="NAME_6">^1</xliff:g> ini akan di-uninstal dan datanya akan dihapus. Untuk menyimpan aplikasi tersebut, pindahkan ke penyimpanan alternatif di perangkat ini."</string>
+    <string name="storage_internal_format_details" msgid="2399034372813686846">"Anda dapat memformat kartu SD ini untuk menyimpan foto, video, musik, dan lainnya serta mengaksesnya di perangkat lain. \n\n"<b>"Semua data di kartu SD ini akan dihapus."</b>" \n\n"<b>"Sebelum memformat"</b>" \n\n"<b>"Cadangkan foto &amp; media lainnya"</b>" \nPindahkan file media Anda ke penyimpanan alternatif di perangkat ini, atau transfer ke komputer menggunakan kabel USB. \n\n"<b>"Cadangkan aplikasi"</b>" \nSemua aplikasi yang disimpan di <xliff:g id="NAME">^1</xliff:g> ini akan di-uninstal dan datanya akan dihapus. Untuk menyimpan aplikasi ini, pindahkan ke penyimpanan alternatif di perangkat ini."</string>
     <string name="storage_internal_unmount_details" msgid="487689543322907311"><b>"Saat Anda mengeluarkan <xliff:g id="NAME_0">^1</xliff:g> ini, aplikasi yang tersimpan di situ tidak akan berfungsi lagi, dan file media yang tersimpan di situ baru dapat tersedia jika dicolokkan kembali."</b>" \n\n <xliff:g id="NAME_1">^1</xliff:g> ini diformat untuk berfungsi hanya di perangkat ini dan tidak akan berfungsi di perangkat lain."</string>
     <string name="storage_internal_forget_details" msgid="5606507270046186691">"Untuk menggunakan aplikasi, foto, atau data dalam <xliff:g id="NAME">^1</xliff:g> ini, colokkan kembali. \n\nAtau, Anda dapat memilih untuk melupakan penyimpanan ini jika perangkat tidak tersedia. \n\nJika Anda memilih untuk melupakan, semua data dalam perangkat ini akan hilang selamanya. \n\nNanti Anda dapat memasang ulang aplikasi, tetapi datanya yang disimpan di perangkat ini akan hilang."</string>
     <string name="storage_internal_forget_confirm_title" msgid="379238668153099015">"Lupakan <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_internal_forget_confirm" msgid="5752634604952674123">"Semua aplikasi, foto, dan data yang disimpan di <xliff:g id="NAME">^1</xliff:g> ini akan hilang selamanya."</string>
     <string name="storage_detail_dialog_system" msgid="7461009051858709479">"Sistem menyertakan file yang digunakan untuk menjalankan Android versi <xliff:g id="VERSION">%s</xliff:g>"</string>
+    <string name="storage_wizard_guest" msgid="5813419895687733649">"Pengguna mode tamu tidak dapat memformat kartu SD"</string>
     <string name="storage_wizard_init_title" msgid="9036374223934708619">"Siapkan <xliff:g id="NAME">^1</xliff:g>"</string>
-    <string name="storage_wizard_init_external_title" msgid="6540132491909241713">"Gunakan sebagai penyimpanan portabel"</string>
-    <string name="storage_wizard_init_external_summary" msgid="5807552934494462984">"Untuk memindahkan foto dan media lain antar-perangkat."</string>
-    <string name="storage_wizard_init_internal_title" msgid="3256355049992147270">"Gunakan sebagai penyimpanan internal"</string>
-    <string name="storage_wizard_init_internal_summary" msgid="2283798331883929674">"Untuk menyimpan item apa pun hanya di perangkat ini, termasuk aplikasi dan foto. Perlu diformat agar tidak berfungsi di perangkat lain."</string>
+    <string name="storage_wizard_init_external_title" msgid="5304499882951772292">"Format kartu SD untuk penyimpanan portabel"</string>
+    <string name="storage_wizard_init_external_summary" msgid="5842588772292324473">"Simpan foto, video, musik, dan lainnya serta akses file dari perangkat lain"</string>
+    <string name="storage_wizard_init_internal_title" msgid="8799676990387869411">"Format kartu SD untuk penyimpanan internal"</string>
+    <string name="storage_wizard_init_internal_summary" msgid="8224648610422581704">"Simpan aplikasi &amp; media hanya untuk digunakan di ponsel ini"</string>
     <string name="storage_wizard_format_confirm_title" msgid="4898014527956178762">"Format sebagai penyimpanan internal"</string>
     <string name="storage_wizard_format_confirm_body" msgid="5514665245241830772">"Agar aman, <xliff:g id="NAME_0">^1</xliff:g> perlu diformat. \n\nSetelah diformat, <xliff:g id="NAME_1">^1</xliff:g> ini hanya akan berfungsi di perangkat ini. \n\n"<b>"Memformat akan menghapus semua data yang saat ini disimpan di <xliff:g id="NAME_2">^1</xliff:g>."</b>" Agar tidak kehilangan data, pertimbangkan untuk mencadangkannya."</string>
     <string name="storage_wizard_format_confirm_public_title" msgid="649252654496577680">"Format sebagai penyimpanan portabel"</string>
@@ -1676,9 +1678,9 @@
     <string name="storage_wizard_migrate_confirm_next" msgid="217478540562501692">"Pindahkan"</string>
     <string name="storage_wizard_migrate_progress_title" msgid="462238335086734131">"Memindahkan data..."</string>
     <string name="storage_wizard_migrate_details" msgid="7474061662976940407">"Selama pemindahan: \n• Jangan cabut <xliff:g id="NAME">^1</xliff:g>. \n• Beberapa aplikasi tidak akan berfungsi dengan benar. \n• Selalu isi daya perangkat."</string>
-    <string name="storage_wizard_ready_title" msgid="3093468548660255543">"<xliff:g id="NAME">^1</xliff:g> siap untuk digunakan"</string>
-    <string name="storage_wizard_ready_external_body" msgid="45040717412844114">"<xliff:g id="NAME">^1</xliff:g> sudah siap untuk digunakan dengan foto dan media lain."</string>
-    <string name="storage_wizard_ready_internal_body" msgid="7734817996475607447">"<xliff:g id="NAME">^1</xliff:g> baru sedang bekerja. \n\nUntuk memindahkan foto, file, dan data aplikasi ke perangkat ini, buka Setelan &gt; Pemindahan."</string>
+    <string name="storage_wizard_ready_title" msgid="3631022511474086605">"<xliff:g id="NAME">^1</xliff:g> telah diformat"</string>
+    <string name="storage_wizard_ready_external_body" msgid="4264787122605706421">"Anda dapat mulai menggunakan <xliff:g id="NAME">^1</xliff:g>"</string>
+    <string name="storage_wizard_ready_internal_body" msgid="2416472979690681273">"Anda dapat mulai menggunakan <xliff:g id="NAME">^1</xliff:g>"</string>
     <string name="storage_wizard_move_confirm_title" msgid="6812469630804101590">"Pindahkan <xliff:g id="APP">^1</xliff:g>"</string>
     <string name="storage_wizard_move_confirm_body" msgid="1713022828842263574">"Pemindahan <xliff:g id="APP">^1</xliff:g> dan datanya ke <xliff:g id="NAME_0">^2</xliff:g> hanya akan berlangsung sebentar. Anda tidak akan dapat menggunakan aplikasi hingga pemindahan selesai. \n\nJangan cabut <xliff:g id="NAME_1">^2</xliff:g> selama pemindahan."</string>
     <string name="storage_wizard_move_unlock" msgid="14651384927767749">"Untuk memindahkan data yang dibutuhkan guna membuka <xliff:g id="APP">^1</xliff:g> pengguna."</string>
@@ -1687,19 +1689,20 @@
     <string name="storage_wizard_move_progress_cancel" msgid="3494022998599718937">"Batalkan pemindahan"</string>
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"<xliff:g id="NAME_0">^1</xliff:g> ini sepertinya lambat. \n\nAnda dapat melanjutkan, tetapi aplikasi yang dipindahkan ke lokasi ini dapat tersendat dan transfer data mungkin berlangsung lama. \n\nPertimbangkan untuk menggunakan <xliff:g id="NAME_1">^1</xliff:g> yang lebih cepat untuk kinerja yang lebih baik."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Bagaimana Anda menggunakan <xliff:g id="NAME">^1</xliff:g> ini?"</string>
-    <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="1884468440013151482">"Jadikan penyimpanan tablet tambahan"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="2907833056467441047">"Hanya untuk aplikasi, file, dan media di tablet ini"</string>
-    <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="3278694259614995649">"Penyimpanan tablet"</string>
-    <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5941952998075252284">"Jadikan penyimpanan ponsel tambahan"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3022584310096954875">"Hanya untuk aplikasi, file, dan media di ponsel ini"</string>
-    <string name="storage_wizard_init_v2_internal_action" product="default" msgid="5645732875040797464">"Penyimpanan ponsel"</string>
+    <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Format kartu SD untuk penyimpanan internal"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Simpan aplikasi &amp; media hanya untuk digunakan di tablet ini. &lt;a href=https://support.google.com/android/answer/12153449&gt;Pelajari lebih lanjut cara menyiapkan kartu SD&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Format"</string>
+    <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Format kartu SD untuk penyimpanan internal"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Simpan aplikasi &amp; media hanya untuk digunakan di ponsel ini. &lt;a href=https://support.google.com/android/answer/12153449&gt;Pelajari lebih lanjut cara menyiapkan kartu SD&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Format"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Atau"</string>
-    <string name="storage_wizard_init_v2_external_title" msgid="8129096036551264207">"Jadikan penyimpanan portabel"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="6436419488235871823">"Untuk mentransfer file dan media antarperangkat"</string>
-    <string name="storage_wizard_init_v2_external_action" msgid="781928899530539860">"Penyimpanan portabel"</string>
+    <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Format kartu SD untuk penyimpanan portabel"</string>
+    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Simpan foto, video, musik, dan lainnya serta akses file dari perangkat lain. &lt;a href=https://support.google.com/android/answer/12153449&gt;Pelajari lebih lanjut cara menyiapkan kartu SD&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Format"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Siapkan nanti"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Format <xliff:g id="NAME">^1</xliff:g> ini?"</string>
     <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"<xliff:g id="NAME_0">^1</xliff:g> perlu diformat untuk menyimpan aplikasi, file, dan media. \n\nMemformat akan menghapus konten yang ada di <xliff:g id="NAME_1">^2</xliff:g>. Agar konten tidak hilang, cadangkan ke <xliff:g id="NAME_2">^3</xliff:g> atau perangkat lain."</string>
+    <string name="storage_wizard_format_confirm_v2_body_external" msgid="5810296966099830035">"<xliff:g id="NAME_0">^1</xliff:g> ini perlu diformat untuk menyimpan foto, video, musik, dan lainnya. \n\nPemformatan akan menghapus konten yang ada di <xliff:g id="NAME_1">^2</xliff:g>. Agar konten tidak hilang, cadangkan ke <xliff:g id="NAME_2">^3</xliff:g> atau perangkat lain."</string>
     <string name="storage_wizard_format_confirm_v2_action" msgid="5718254101386377126">"Format <xliff:g id="NAME">^1</xliff:g>"</string>
     <string name="storage_wizard_migrate_v2_title" msgid="3471564531564756698">"Pindahkan konten ke <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_migrate_v2_body" product="tablet" msgid="4541523202790415721">"Anda dapat memindahkan file, media, dan aplikasi tertentu ke <xliff:g id="NAME">^1</xliff:g> ini. \n\nPemindahan ini akan mengosongkan <xliff:g id="SIZE">^2</xliff:g> dari penyimpanan tablet dan memerlukan waktu sekitar <xliff:g id="DURATION">^3</xliff:g>."</string>
@@ -1716,9 +1719,9 @@
     <string name="storage_wizard_slow_v2_body" msgid="7604252106419016929">"Anda tetap dapat menggunakan <xliff:g id="NAME_0">^1</xliff:g> ini, tetapi mungkin lambat. \n\nAplikasi yang disimpan di <xliff:g id="NAME_1">^2</xliff:g> ini mungkin tidak berfungsi dengan baik, dan transfer konten memerlukan waktu yang lama. \n\nCoba gunakan <xliff:g id="NAME_2">^3</xliff:g> yang lebih cepat, atau gunakan <xliff:g id="NAME_3">^4</xliff:g> ini untuk penyimpanan portabel."</string>
     <string name="storage_wizard_slow_v2_start_over" msgid="1806852287668077536">"Mulai dari awal"</string>
     <string name="storage_wizard_slow_v2_continue" msgid="7469713755893007901">"Lanjutkan"</string>
-    <string name="storage_wizard_ready_v2_external_body" msgid="3896836008684280905">"Anda dapat memindahkan konten ke <xliff:g id="NAME">^1</xliff:g>"</string>
-    <string name="storage_wizard_ready_v2_internal_body" msgid="5710665992219332454">"Untuk memindahkan konten ke <xliff:g id="NAME">^1</xliff:g>, buka "<b>"Setelan &gt; Penyimpanan"</b></string>
-    <string name="storage_wizard_ready_v2_internal_moved_body" msgid="1269878056598666852">"Konten dipindahkan ke <xliff:g id="NAME_0">^1</xliff:g>. \n\nUntuk mengelola <xliff:g id="NAME_1">^2</xliff:g> ini, buka "<b>"Setelan &gt; Penyimpanan"</b>"."</string>
+    <string name="storage_wizard_ready_v2_external_body" msgid="7688457485389886923">"Anda dapat mulai menggunakan <xliff:g id="NAME">^1</xliff:g>"</string>
+    <string name="storage_wizard_ready_v2_internal_body" msgid="3520269956641115883">"Anda dapat mulai menggunakan <xliff:g id="NAME">^1</xliff:g>"</string>
+    <string name="storage_wizard_ready_v2_internal_moved_body" msgid="1163588718127651062">"Anda dapat mulai menggunakan <xliff:g id="NAME">^1</xliff:g>"</string>
     <string name="battery_status_title" msgid="4661768220545945771">"Status baterai"</string>
     <string name="battery_level_title" msgid="1371765298786083448">"Tingkat baterai"</string>
     <string name="apn_settings" msgid="4295467389400441299">"APN"</string>
@@ -2996,6 +2999,10 @@
     <string name="battery_usage_screen_footer" msgid="7899907241146636817">"Data penggunaan baterai merupakan perkiraan dan tidak mengukur penggunaan saat ponsel sedang diisi daya"</string>
     <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"Data penggunaan baterai akan tersedia setelah Anda menggunakan ponsel selama beberapa jam"</string>
     <string name="battery_usage_chart" msgid="4114747521432440017">"Diagram penggunaan baterai"</string>
+    <!-- no translation found for daily_battery_usage_chart (4176059567682992686) -->
+    <skip />
+    <!-- no translation found for hourly_battery_usage_chart (3098314511076561272) -->
+    <skip />
     <string name="process_stats_summary_title" msgid="502683176231281732">"Statistik Proses"</string>
     <string name="process_stats_summary" msgid="522842188571764699">"Statistik teknis tentang proses yang berjalan"</string>
     <string name="app_memory_use" msgid="7559666138324410666">"Penggunaan memori"</string>
@@ -3551,6 +3558,8 @@
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Memungkinkan aplikasi menggunakan informasi lokasi Anda"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Kembali"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Berikutnya"</string>
+    <string name="wizard_back_portable" msgid="5315939180781404882">"Beralih ke portabel"</string>
+    <string name="wizard_back_adoptable" msgid="1447814356855134183">"Format dengan cara lain"</string>
     <string name="wizard_finish" msgid="4220258401946825946">"Selesai"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_setup_wizard_title" msgid="3945520353564138219">"Kartu SIM"</string>
@@ -5611,6 +5620,10 @@
     <string name="media_controls_title" msgid="403271085636252597">"Media"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Sematkan pemutar media"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Untuk melanjutkan pemutaran dengan cepat, pemutar media tetap terbuka di Setelan Cepat"</string>
+    <!-- no translation found for media_controls_lockscreen_title (2188311721857512510) -->
+    <skip />
+    <!-- no translation found for media_controls_lockscreen_description (3320333660404439510) -->
+    <skip />
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"Tampilkan rekomendasi media"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"Berdasarkan aktivitas Anda"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"Sembunyikan pemutar"</string>
