--- a/res/values-lv/strings.xml
+++ b/res/values-lv/strings.xml
@@ -1638,9 +1638,10 @@
     <string name="storage_menu_rename" msgid="8549835371429159336">"Pārdēvēt"</string>
     <string name="storage_menu_mount" msgid="4760531872302820569">"Pievienot"</string>
     <string name="storage_menu_unmount" msgid="8171552487742912282">"Noņemt"</string>
-    <string name="storage_menu_format" msgid="5454870642788909443">"Formatēt"</string>
+    <string name="storage_menu_format" msgid="8903698999905354146">"Formatēt SD karti pārnēsājamai krātuvei"</string>
+    <string name="storage_menu_format_button" msgid="7623565190643699626">"Formatēt karti"</string>
     <string name="storage_menu_format_public" msgid="5567214442727034630">"Formatēt kā pārnesamu"</string>
-    <string name="storage_menu_format_private" msgid="3208326980027382079">"Formatēt kā iekšēju"</string>
+    <string name="storage_menu_format_option" msgid="4886059624052908432">"Formatēt"</string>
     <string name="storage_menu_migrate" msgid="2196088149560070193">"Migrēt datus"</string>
     <string name="storage_menu_forget" msgid="5154017890033638936">"Noņemt"</string>
     <string name="storage_menu_set_up" msgid="4401074025612064744">"Iestatīt"</string>
@@ -1670,17 +1671,18 @@
     <string name="storage_rename_title" msgid="5911285992205282312">"Pārdēvējiet atmiņu"</string>
     <string name="storage_dialog_unmounted" msgid="1187960789775910051">"Šī ierīce (<xliff:g id="NAME_0">^1</xliff:g>) ir droši noņemta, taču joprojām pieejama. \n\nLai lietotu šo ierīci (<xliff:g id="NAME_1">^1</xliff:g>), tā vispirms ir jāiekļauj."</string>
     <string name="storage_dialog_unmountable" msgid="1761107904296941687">"Šī ierīce (<xliff:g id="NAME_0">^1</xliff:g>) ir bojāta.\n\nLai varētu lietot šo ierīci (<xliff:g id="NAME_1">^1</xliff:g>), tā vispirms ir jāiestata."</string>
-    <string name="storage_internal_format_details" msgid="8922023528848861812">"Pēc formatēšanas varat izmantot šo <xliff:g id="NAME_0">^1</xliff:g> citās ierīcēs. \n\nVisi šajā <xliff:g id="NAME_1">^1</xliff:g> saglabātie dati tiks dzēsti. Ieteicams vispirms dublēt datus. \n\n"<b>"Dublējiet fotoattēlus un citu saturu"</b>" \nPārvietojiet satura failus uz šīs ierīces alternatīvo krātuvi vai pārsūtiet tos uz datoru, izmantojot USB kabeli. \n\n"<b>"Dublējiet lietotnes"</b>" \nVisas šajā <xliff:g id="NAME_6">^1</xliff:g> glabātās lietotnes tiks atinstalētas, un to dati tiks dzēsti. Lai saglabātu šīs lietotnes, pārvietojiet tās uz šīs ierīces alternatīvo krātuvi."</string>
+    <string name="storage_internal_format_details" msgid="2399034372813686846">"Varat formatēt šo SD karti, lai glabātu fotoattēlus, videoklipus, mūziku un citu saturu citās ierīcēs. \n\n"<b>"Visi dati šajā SD kartē tiks dzēsti."</b>" \n\n"<b>"Pirms formatēšanas"</b>" \n\n"<b>"Dublējiet fotoattēlus un citu multividi"</b>" \nPārvietojiet multivides failus uz citu krātuvi šajā ierīcē vai pārsūtiet tos uz datoru, izmantojot USB vadu. \n\n"<b>"Dublējiet lietotnes"</b>" \nVisas šeit (<xliff:g id="NAME">^1</xliff:g>) uzglabātās lietotnes tiks atinstalētas un to dati tiks dzēsti. Lai paturētu šīs lietotnes, pārvietojiet tās uz citu krātuvi šajā ierīcē."</string>
     <string name="storage_internal_unmount_details" msgid="487689543322907311"><b>"Izņemot ierīci <xliff:g id="NAME_0">^1</xliff:g>, tajā glabātās lietotnes vairs nedarbosies un tajā glabātie faili nebūs pieejami, kamēr tā netiks ievietota atpakaļ."</b>\n\n"<xliff:g id="NAME_1">^1</xliff:g> ir formatēta tā, lai darbotos tikai šajā ierīcē, un tā nedarbosies citās ierīcēs."</string>
     <string name="storage_internal_forget_details" msgid="5606507270046186691">"Lai izmantotu lietotnes, fotoattēlus vai datus, kas saglabāti ierīcē <xliff:g id="NAME">^1</xliff:g>, ievietojiet to atkārtoti.\n\nVarat arī noņemt šo krātuvi, ja ierīce nav pieejama.\n\nŠādā gadījumā visi ierīcē esošie dati tiks neatgriezeniski zaudēti.\n\nVēlāk varēsiet atkārtoti instalēt lietotnes, taču to dati, kas saglabāti šajā ierīcē, vairs nebūs pieejami."</string>
     <string name="storage_internal_forget_confirm_title" msgid="379238668153099015">"<xliff:g id="NAME">^1</xliff:g>: vai noņemt?"</string>
     <string name="storage_internal_forget_confirm" msgid="5752634604952674123">"Visas lietotnes, fotoattēli un dati, kas saglabāti šajā ierīcē (<xliff:g id="NAME">^1</xliff:g>), vairs nebūs pieejami."</string>
     <string name="storage_detail_dialog_system" msgid="7461009051858709479">"Sistēmā ir ietverti faili, kas tiek izmantoti Android versijai <xliff:g id="VERSION">%s</xliff:g>."</string>
+    <string name="storage_wizard_guest" msgid="5813419895687733649">"Viesa režīma lietotāji nevar formatēt SD kartes"</string>
     <string name="storage_wizard_init_title" msgid="9036374223934708619">"Iestatiet <xliff:g id="NAME">^1</xliff:g>"</string>
-    <string name="storage_wizard_init_external_title" msgid="6540132491909241713">"Izmantot kā pārnesamu krātuvi"</string>
-    <string name="storage_wizard_init_external_summary" msgid="5807552934494462984">"Izvēloties šo opciju, varēsiet pārvietot fotoattēlus un citus datus uz citām ierīcēm."</string>
-    <string name="storage_wizard_init_internal_title" msgid="3256355049992147270">"Izmantot kā iekšējo atmiņu"</string>
-    <string name="storage_wizard_init_internal_summary" msgid="2283798331883929674">"Izvēloties šo opciju, varēsiet glabāt failus (tostarp lietotnes un fotoattēlus) tikai šajā ierīcē. Tādā gadījumā krātuve ir jāformatē, lai tā darbotos tikai konkrētā ierīcē."</string>
+    <string name="storage_wizard_init_external_title" msgid="5304499882951772292">"Formatēt SD karti pārnēsājamai krātuvei"</string>
+    <string name="storage_wizard_init_external_summary" msgid="5842588772292324473">"Saglabājiet fotoattēlus, videoklipus, mūziku un citu saturu, lai varētu tam piekļūt no citām ierīcēm"</string>
+    <string name="storage_wizard_init_internal_title" msgid="8799676990387869411">"Formatēt SD karti iekšējai atmiņai"</string>
+    <string name="storage_wizard_init_internal_summary" msgid="8224648610422581704">"Saglabāt lietotnes un multivides failus izmantošanai tikai šajā tālrunī"</string>
     <string name="storage_wizard_format_confirm_title" msgid="4898014527956178762">"Formatēt kā iekšējo atmiņu"</string>
     <string name="storage_wizard_format_confirm_body" msgid="5514665245241830772">"Lai padarītu <xliff:g id="NAME_0">^1</xliff:g> drošu, tā ir jāformatē. \n\nPēc formatēšanas šī <xliff:g id="NAME_1">^1</xliff:g> darbosies tikai šajā ierīcē. \n\n"<b>"Formatējot <xliff:g id="NAME_2">^1</xliff:g>, tiks dzēsti visi tajā pašlaik glabātie dati."</b>" Lai nezaudētu datus, dublējiet tos."</string>
     <string name="storage_wizard_format_confirm_public_title" msgid="649252654496577680">"Formatēt kā pārnesamu krātuvi"</string>
@@ -1697,9 +1699,9 @@
     <string name="storage_wizard_migrate_confirm_next" msgid="217478540562501692">"Pārvietot failus"</string>
     <string name="storage_wizard_migrate_progress_title" msgid="462238335086734131">"Notiek datu pārvietošana…"</string>
     <string name="storage_wizard_migrate_details" msgid="7474061662976940407">"Failu pārvietošanas laikā: \n• neizņemiet karti \"<xliff:g id="NAME">^1</xliff:g>\"; \n• dažas lietotnes var nedarboties pareizi; \n• uzturiet ierīces akumulatora enerģijas līmeni."</string>
-    <string name="storage_wizard_ready_title" msgid="3093468548660255543">"Ierīce <xliff:g id="NAME">^1</xliff:g> ir gatava lietošanai"</string>
-    <string name="storage_wizard_ready_external_body" msgid="45040717412844114">"Jūsu <xliff:g id="NAME">^1</xliff:g> ir iestatīta, un tajā var glabāt fotoattēlus un citu saturu"</string>
-    <string name="storage_wizard_ready_internal_body" msgid="7734817996475607447">"Jaunā <xliff:g id="NAME">^1</xliff:g> darbojas. \n\nLai pārvietotu fotoattēlus un lietotņu datus uz šo ierīci, atveriet izvēlni Iestatījumi &gt; Krātuve."</string>
+    <string name="storage_wizard_ready_title" msgid="3631022511474086605">"<xliff:g id="NAME">^1</xliff:g>: formatēts"</string>
+    <string name="storage_wizard_ready_external_body" msgid="4264787122605706421">"Varat sākt izmantot: <xliff:g id="NAME">^1</xliff:g>"</string>
+    <string name="storage_wizard_ready_internal_body" msgid="2416472979690681273">"Varat sākt izmantot: <xliff:g id="NAME">^1</xliff:g>"</string>
     <string name="storage_wizard_move_confirm_title" msgid="6812469630804101590">"Pārvietojiet lietotni <xliff:g id="APP">^1</xliff:g>"</string>
     <string name="storage_wizard_move_confirm_body" msgid="1713022828842263574">"Lietotnes <xliff:g id="APP">^1</xliff:g> un tās datu pārvietošana uz <xliff:g id="NAME_0">^2</xliff:g> aizņems tikai neilgu brīdi. Kamēr pārvietošana nebūs pabeigta, nevarēsiet izmantot lietotni. \n\nNeizņemiet <xliff:g id="NAME_1">^2</xliff:g>, kamēr tiek pārvietoti faili."</string>
     <string name="storage_wizard_move_unlock" msgid="14651384927767749">"Lai pārvietotu datus, jums ir jāatbloķē lietotājs: <xliff:g id="APP">^1</xliff:g>."</string>
@@ -1708,19 +1710,20 @@
     <string name="storage_wizard_move_progress_cancel" msgid="3494022998599718937">"Atcelt pārvietošanu"</string>
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"Šķiet, ka <xliff:g id="NAME_0">^1</xliff:g> darbojas lēni. \n\nVarat turpināt to izmanot, taču iespējams, ka lietotnes, kuras pārvietosiet uz šo atrašanās vietu, darbosies ar pārtraukumiem un datu pārsūtīšanai būs nepieciešams ilgs laiks. \n\nĀtrāka <xliff:g id="NAME_1">^1</xliff:g> varētu nodrošināt labāku veiktspēju."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Kā tiks izmantota ierīce <xliff:g id="NAME">^1</xliff:g>?"</string>
-    <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="1884468440013151482">"Planšetdatora papildu krātuvei"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="2907833056467441047">"Lietotnēm, failiem, multivides saturam tikai šajā planšetdatorā"</string>
-    <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="3278694259614995649">"Planšetdatora krātuve"</string>
-    <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5941952998075252284">"Tālruņa papildu krātuvei"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3022584310096954875">"Lietotnēm, failiem un multivides saturam tikai šajā tālrunī"</string>
-    <string name="storage_wizard_init_v2_internal_action" product="default" msgid="5645732875040797464">"Tālruņa krātuve"</string>
+    <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Formatēt SD karti iekšējai atmiņai"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Uzglabājiet lietotnes un multivides failus izmantošanai tikai šajā planšetdatorā. &lt;a href=https://support.google.com/android/answer/12153449&gt;Uzziniet vairāk par SD kartes iestatīšanu&lt;/a&gt;."</string>
+    <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Formatēt"</string>
+    <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Formatēt SD karti iekšējai atmiņai"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Uzglabājiet lietotnes un multivides failus izmantošanai tikai šajā tālrunī. &lt;a href=https://support.google.com/android/answer/12153449&gt;Uzziniet vairāk par SD kartes iestatīšanu&lt;/a&gt;."</string>
+    <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Formatēt"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Vai"</string>
-    <string name="storage_wizard_init_v2_external_title" msgid="8129096036551264207">"Pārnesamai krātuvei"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="6436419488235871823">"Failu un multivides satura pārsūtīšanai starp ierīcēm"</string>
-    <string name="storage_wizard_init_v2_external_action" msgid="781928899530539860">"Pārnesama krātuve"</string>
+    <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Formatēt SD karti pārnēsājamai krātuvei"</string>
+    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Uzglabājiet fotoattēlus, videoklipus, mūziku un citu saturu, lai varētu tam piekļūt no citām ierīcēm. &lt;a href=https://support.google.com/android/answer/12153449&gt;Uzziniet vairāk par SD kartes iestatīšanu&lt;/a&gt;."</string>
+    <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Formatēt"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Iestatīt vēlāk"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Vai formatēt šo: <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"Lai saglabātu lietotnes, failus un multivides saturu, SD karte <xliff:g id="NAME_0">^1</xliff:g> ir jāformatē. \n\nFormatējot tiks dzēsts viss saturs, kas saglabāts šeit: <xliff:g id="NAME_1">^2</xliff:g>. Lai nezaudētu saturu, dublējiet to citā datu nesējā <xliff:g id="NAME_2">^3</xliff:g> vai citā ierīcē."</string>
+    <string name="storage_wizard_format_confirm_v2_body_external" msgid="5810296966099830035">"Lai saglabātu fotoattēlus, videoklipus, mūziku un citu saturu, <xliff:g id="NAME_0">^1</xliff:g> ir jāformatē. \n\nFormatējot tiks dzēsts viss saturs, kas saglabāts šeit: <xliff:g id="NAME_1">^2</xliff:g>. Lai nezaudētu saturu, dublējiet to citā datu nesējā <xliff:g id="NAME_2">^3</xliff:g> vai citā ierīcē."</string>
     <string name="storage_wizard_format_confirm_v2_action" msgid="5718254101386377126">"Formatēt <xliff:g id="NAME">^1</xliff:g>"</string>
     <string name="storage_wizard_migrate_v2_title" msgid="3471564531564756698">"Vai pārvietot saturu uz ierīci <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_migrate_v2_body" product="tablet" msgid="4541523202790415721">"Varat pārvietot failus, multivides saturu un noteiktas lietotnes uz šo ierīci: <xliff:g id="NAME">^1</xliff:g>. \n\nTādējādi atbrīvosiet <xliff:g id="SIZE">^2</xliff:g> vietas planšetdatora krātuvē. Process ilgs aptuveni <xliff:g id="DURATION">^3</xliff:g>."</string>
@@ -1737,9 +1740,9 @@
     <string name="storage_wizard_slow_v2_body" msgid="7604252106419016929">"Varat turpināt lietot ierīci <xliff:g id="NAME_0">^1</xliff:g>, tomēr tā var darboties lēni. \n\nIerīcē <xliff:g id="NAME_1">^2</xliff:g> saglabātās lietotnes var darboties neatbilstoši un satura pārsūtīšanai var būt nepieciešams ilgs laiks. \n\nMēģiniet izmantot ierīci <xliff:g id="NAME_2">^3</xliff:g> ar ātrāku darbību, vai arī šo ierīci <xliff:g id="NAME_3">^4</xliff:g> izmantojiet kā pārnesamu krātuvi."</string>
     <string name="storage_wizard_slow_v2_start_over" msgid="1806852287668077536">"Sākt vēlreiz"</string>
     <string name="storage_wizard_slow_v2_continue" msgid="7469713755893007901">"Tālāk"</string>
-    <string name="storage_wizard_ready_v2_external_body" msgid="3896836008684280905">"Varat pārvietot saturu uz ierīci <xliff:g id="NAME">^1</xliff:g>"</string>
-    <string name="storage_wizard_ready_v2_internal_body" msgid="5710665992219332454">"Lai pārvietotu saturu uz ierīci <xliff:g id="NAME">^1</xliff:g>, pārejiet uz sadaļu "<b>"Iestatījumi &gt; Krātuve"</b></string>
-    <string name="storage_wizard_ready_v2_internal_moved_body" msgid="1269878056598666852">"Saturs tika pārvietots uz ierīci <xliff:g id="NAME_0">^1</xliff:g>. \n\nLai pārvaldītu šo ierīci <xliff:g id="NAME_1">^2</xliff:g>, pārejiet uz sadaļu "<b>"Iestatījumi &gt; Krātuve"</b>"."</string>
+    <string name="storage_wizard_ready_v2_external_body" msgid="7688457485389886923">"Varat sākt izmantot: <xliff:g id="NAME">^1</xliff:g>"</string>
+    <string name="storage_wizard_ready_v2_internal_body" msgid="3520269956641115883">"Varat sākt izmantot: <xliff:g id="NAME">^1</xliff:g>"</string>
+    <string name="storage_wizard_ready_v2_internal_moved_body" msgid="1163588718127651062">"Varat sākt izmantot: <xliff:g id="NAME">^1</xliff:g>"</string>
     <string name="battery_status_title" msgid="4661768220545945771">"Akumulatora statuss"</string>
     <string name="battery_level_title" msgid="1371765298786083448">"Akumulatora uzlādes līmenis"</string>
     <string name="apn_settings" msgid="4295467389400441299">"APN"</string>
@@ -3034,6 +3037,10 @@
     <string name="battery_usage_screen_footer" msgid="7899907241146636817">"Akumulatora lietojuma dati ir aptuveni, un tālruņa uzlādes laikā lietojums netiek mērīts"</string>
     <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"Akumulatora lietojuma dati būs pieejami, kad būsiet lietojis tālruni dažas stundas."</string>
     <string name="battery_usage_chart" msgid="4114747521432440017">"Akumulatora lietojuma diagramma"</string>
+    <!-- no translation found for daily_battery_usage_chart (4176059567682992686) -->
+    <skip />
+    <!-- no translation found for hourly_battery_usage_chart (3098314511076561272) -->
+    <skip />
     <string name="process_stats_summary_title" msgid="502683176231281732">"Procesu statistika"</string>
     <string name="process_stats_summary" msgid="522842188571764699">"Statistika par darbības procesiem"</string>
     <string name="app_memory_use" msgid="7559666138324410666">"Atmiņas lietojums"</string>
@@ -3593,6 +3600,8 @@
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Atļaut lietotnēs izmantot informāciju par atrašanās vietu"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Atpakaļ"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Tālāk"</string>
+    <string name="wizard_back_portable" msgid="5315939180781404882">"Mainīt uz pārnēsājamo"</string>
+    <string name="wizard_back_adoptable" msgid="1447814356855134183">"Formatēt citā veidā"</string>
     <string name="wizard_finish" msgid="4220258401946825946">"Pabeigt"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_setup_wizard_title" msgid="3945520353564138219">"SIM kartes"</string>
@@ -5698,6 +5707,8 @@
     <string name="media_controls_title" msgid="403271085636252597">"Multivide"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Piespraust multivides atskaņotāju"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Multivides atskaņotājs paliek atvērts sadaļā Ātrie iestatījumi, lai varētu ātri atsākt atskaņošanu"</string>
+    <string name="media_controls_lockscreen_title" msgid="2188311721857512510">"Rādīt multividi bloķēšanas ekrānā"</string>
+    <string name="media_controls_lockscreen_description" msgid="3320333660404439510">"Multivides atskaņotājs paliek atvērts bloķēšanas ekrānā, lai varētu ātri atsākt atskaņošanu"</string>
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"Rādīt multivides satura ieteikumus"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"Ieteikumu pamatā ir jūsu darbības"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"Paslēpt atskaņotāju"</string>
