--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -1617,9 +1617,10 @@
     <string name="storage_menu_rename" msgid="8549835371429159336">"Namakan semula"</string>
     <string name="storage_menu_mount" msgid="4760531872302820569">"Lekap"</string>
     <string name="storage_menu_unmount" msgid="8171552487742912282">"Tanggalkan"</string>
-    <string name="storage_menu_format" msgid="5454870642788909443">"Format"</string>
+    <string name="storage_menu_format" msgid="8903698999905354146">"Format kad SD untuk storan mudah alih"</string>
+    <string name="storage_menu_format_button" msgid="7623565190643699626">"Format kad"</string>
     <string name="storage_menu_format_public" msgid="5567214442727034630">"Formatkan sebagai mudah alih"</string>
-    <string name="storage_menu_format_private" msgid="3208326980027382079">"Formatkan sebagai dalaman"</string>
+    <string name="storage_menu_format_option" msgid="4886059624052908432">"Format"</string>
     <string name="storage_menu_migrate" msgid="2196088149560070193">"Pindahkan data"</string>
     <string name="storage_menu_forget" msgid="5154017890033638936">"Lupakan"</string>
     <string name="storage_menu_set_up" msgid="4401074025612064744">"Sediakan"</string>
@@ -1649,17 +1650,18 @@
     <string name="storage_rename_title" msgid="5911285992205282312">"Namakan semula storan"</string>
     <string name="storage_dialog_unmounted" msgid="1187960789775910051">"<xliff:g id="NAME_0">^1</xliff:g> ini telah selamat dikeluarkan, namun masih tersedia. \n\nUntuk menggunakan <xliff:g id="NAME_1">^1</xliff:g> ini, anda perlu melekapkannya terlebih dahulu."</string>
     <string name="storage_dialog_unmountable" msgid="1761107904296941687">"<xliff:g id="NAME_0">^1</xliff:g> ini rosak. \n\nUntuk menggunakan <xliff:g id="NAME_1">^1</xliff:g> ini, anda perlu menyediakannya terlebih dahulu."</string>
-    <string name="storage_internal_format_details" msgid="8922023528848861812">"Selepas memformat, anda boleh menggunakan <xliff:g id="NAME_0">^1</xliff:g> ini dalam peranti lain. \n\nSemua data pada <xliff:g id="NAME_1">^1</xliff:g> ini akan dipadamkan. Anda mungkin ingin membuat sandaran dahulu. \n\n"<b>"Sandarkan foto &amp; media lain"</b>" \nAlihkan fail media anda ke storan alternatif pada peranti ini atau pindahkannya ke komputer menggunakan kabel USB. \n\n"<b>"Sandarkan apl"</b>" \nSemua apl yang disimpan pada <xliff:g id="NAME_6">^1</xliff:g> ini akan dinyahpasang dan datanya akan dipadamkan. Untuk menyimpan apl ini, alihkannya ke storan alternatif pada peranti ini."</string>
+    <string name="storage_internal_format_details" msgid="2399034372813686846">"Anda boleh memformatkan kad SD ini untuk menyimpan foto, video, muzik dan banyak lagi, serta mengakses pada peranti lain. \n\n"<b>"Semua data pada kad SD ini akan dipadamkan."</b>" \n\n"<b>"Sebelum memformat"</b>" \n\n"<b>"Sandarkan foto &amp; media lain"</b>" \nAlihkan fail media anda ke storan alternatif pada peranti ini atau pindahkan fail ke komputer menggunakan kabel USB. \n\n"<b>"Sandarkan apl"</b>" \nSemua apl yang disimpan pada <xliff:g id="NAME">^1</xliff:g> ini akan dinyahpasang dan data apl akan dipadamkan. Untuk menyimpan apl ini, alihkan apl ke storan alternatif pada peranti ini."</string>
     <string name="storage_internal_unmount_details" msgid="487689543322907311"><b>"Apabila anda mengeluarkan <xliff:g id="NAME_0">^1</xliff:g> ini, apl yang disimpan padanya akan berhenti berfungsi dan fail media yang disimpan padanya tidak akan tersedia sehingga storan itu dimasukkan semula."</b>" \n\n<xliff:g id="NAME_1">^1</xliff:g> ini diformatkan untuk berfungsi pada peranti ini sahaja. Storan ini tidak akan berfungsi pada sebarang peranti lain."</string>
     <string name="storage_internal_forget_details" msgid="5606507270046186691">"Untuk menggunakan apl, foto atau data yang terkandung dalam <xliff:g id="NAME">^1</xliff:g> ini, masukkannya semula. \n\nAtau, anda boleh memilih untuk melupakan storan ini jika peranti tidak tersedia. \n\nJika anda memilih untuk melupakannya, semua data yang terkandung dalam peranti itu akan hilang selama-lamanya. \n\nAnda boleh memasang semula apl ini kemudian tetapi datanya yang tersimpan pada peranti ini akan hilang."</string>
     <string name="storage_internal_forget_confirm_title" msgid="379238668153099015">"Lupakan <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_internal_forget_confirm" msgid="5752634604952674123">"Semua apl, foto dan data yang disimpan pada <xliff:g id="NAME">^1</xliff:g> ini akan hilang selama-lamanya."</string>
     <string name="storage_detail_dialog_system" msgid="7461009051858709479">"Sistem termasuk fail yang digunakan untuk menjalankan Android versi <xliff:g id="VERSION">%s</xliff:g>"</string>
+    <string name="storage_wizard_guest" msgid="5813419895687733649">"Pengguna mod tetamu tidak boleh memformat kad SD"</string>
     <string name="storage_wizard_init_title" msgid="9036374223934708619">"Sediakan <xliff:g id="NAME">^1</xliff:g> anda"</string>
-    <string name="storage_wizard_init_external_title" msgid="6540132491909241713">"Gunakan sebagai storan mudah bawa"</string>
-    <string name="storage_wizard_init_external_summary" msgid="5807552934494462984">"Untuk mengalihkan foto dan media lain antara peranti."</string>
-    <string name="storage_wizard_init_internal_title" msgid="3256355049992147270">"Gunakan sebagai storan dalaman"</string>
-    <string name="storage_wizard_init_internal_summary" msgid="2283798331883929674">"Untuk menyimpan apa-apa pada peranti ini sahaja, termasuk apl dan foto. Perlu diformat, tetapi storan tidak akan dapat berfungsi dengan peranti lain."</string>
+    <string name="storage_wizard_init_external_title" msgid="5304499882951772292">"Format kad SD untuk storan mudah alih"</string>
+    <string name="storage_wizard_init_external_summary" msgid="5842588772292324473">"Simpan foto, video, muzik dan banyak lagi, serta akses daripada peranti lain"</string>
+    <string name="storage_wizard_init_internal_title" msgid="8799676990387869411">"Format kad SD untuk storan dalaman"</string>
+    <string name="storage_wizard_init_internal_summary" msgid="8224648610422581704">"Simpan apl &amp; media untuk digunakan pada telefon ini sahaja"</string>
     <string name="storage_wizard_format_confirm_title" msgid="4898014527956178762">"Format sebagai storan dalaman"</string>
     <string name="storage_wizard_format_confirm_body" msgid="5514665245241830772">"Proses ini memerlukan <xliff:g id="NAME_0">^1</xliff:g> diformatkan supaya menjadi lebih selamat. \n\nSelepas memformatnya, <xliff:g id="NAME_1">^1</xliff:g> ini hanya akan berfungsi pada peranti ini sahaja. \n\n"<b>"Proses memformat akan memadamkan semua data yang disimpan pada <xliff:g id="NAME_2">^1</xliff:g>."</b>" Untuk mengelakkan daripada kehilangan data, sila buat sandaran."</string>
     <string name="storage_wizard_format_confirm_public_title" msgid="649252654496577680">"Formatkan sebagai storan mudah alih"</string>
@@ -1676,9 +1678,9 @@
     <string name="storage_wizard_migrate_confirm_next" msgid="217478540562501692">"Alih"</string>
     <string name="storage_wizard_migrate_progress_title" msgid="462238335086734131">"Mengalihkan data..."</string>
     <string name="storage_wizard_migrate_details" msgid="7474061662976940407">"Semasa peralihan: \n• Jangan tanggalkan <xliff:g id="NAME">^1</xliff:g>. \n• Sesetengah apl tidak akan berfungsi dengan betul. \n• Pastikan peranti terus dicas."</string>
-    <string name="storage_wizard_ready_title" msgid="3093468548660255543">"<xliff:g id="NAME">^1</xliff:g> anda sudah sedia utk digunakan"</string>
-    <string name="storage_wizard_ready_external_body" msgid="45040717412844114">"<xliff:g id="NAME">^1</xliff:g> anda sudah disediakan untuk digunakan dengan foto dan media lain."</string>
-    <string name="storage_wizard_ready_internal_body" msgid="7734817996475607447">"<xliff:g id="NAME">^1</xliff:g> baharu anda berfungsi. \n\nUntuk mengalihkan foto, fail dan data apl ke peranti ini, pergi ke Tetapan &gt; Storan."</string>
+    <string name="storage_wizard_ready_title" msgid="3631022511474086605">"<xliff:g id="NAME">^1</xliff:g> sudah diformat"</string>
+    <string name="storage_wizard_ready_external_body" msgid="4264787122605706421">"Anda boleh mula menggunakan <xliff:g id="NAME">^1</xliff:g> anda"</string>
+    <string name="storage_wizard_ready_internal_body" msgid="2416472979690681273">"Anda boleh mula menggunakan <xliff:g id="NAME">^1</xliff:g> anda"</string>
     <string name="storage_wizard_move_confirm_title" msgid="6812469630804101590">"Alihkan <xliff:g id="APP">^1</xliff:g>"</string>
     <string name="storage_wizard_move_confirm_body" msgid="1713022828842263574">"Mengalihkan <xliff:g id="APP">^1</xliff:g> dan datanya ke <xliff:g id="NAME_0">^2</xliff:g> akan mengambil sedikit masa sahaja. Anda tidak akan dapat menggunakan apl sehinga peralihan selesai. \n\nJangan tanggalkan <xliff:g id="NAME_1">^2</xliff:g> semasa peralihan."</string>
     <string name="storage_wizard_move_unlock" msgid="14651384927767749">"Untuk mengalihkan data, anda perlu membuka kunci pengguna <xliff:g id="APP">^1</xliff:g>."</string>
@@ -1687,19 +1689,20 @@
     <string name="storage_wizard_move_progress_cancel" msgid="3494022998599718937">"Batalkan peralihan"</string>
     <string name="storage_wizard_slow_body" msgid="8293565076885232029">"<xliff:g id="NAME_0">^1</xliff:g> ini nampaknya perlahan. \n\nAnda boleh meneruskan, namun apl yang dialihkan ke lokasi ini mungkin tersekat-sekat dan proses pemindahan data mungkin mengambil masa yang lama. \n\nAnda disarankan supaya menggunakan <xliff:g id="NAME_1">^1</xliff:g> yang lebih laju untuk mendapatkan prestasi yang lebih baik."</string>
     <string name="storage_wizard_init_v2_title" msgid="2538630338392381113">"Bagaimanakah <xliff:g id="NAME">^1</xliff:g> akan digunakan?"</string>
-    <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="1884468440013151482">"Gunakan untuk storan tambahan"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="2907833056467441047">"Untuk apl, fail dan media pada tablet ini sahaja"</string>
-    <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="3278694259614995649">"Storan tablet"</string>
-    <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5941952998075252284">"Gunakan untuk storan tambahan"</string>
-    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3022584310096954875">"Untuk apl, fail dan media pada telefon ini sahaja"</string>
-    <string name="storage_wizard_init_v2_internal_action" product="default" msgid="5645732875040797464">"Storan telefon"</string>
+    <string name="storage_wizard_init_v2_internal_title" product="tablet" msgid="5201609602833104654">"Format kad SD untuk storan dalaman"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="tablet" msgid="1236154481658009267">"Simpan apl &amp; media untuk digunakan pada tablet ini sahaja. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ketahui lebih lanjut tentang persediaan kad SD&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_action" product="tablet" msgid="274533758831212652">"Format"</string>
+    <string name="storage_wizard_init_v2_internal_title" product="default" msgid="5201609602833104654">"Format kad SD untuk storan dalaman"</string>
+    <string name="storage_wizard_init_v2_internal_summary" product="default" msgid="3771689638403679317">"Simpan apl &amp; media untuk digunakan pada telefon ini sahaja. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ketahui lebih lanjut tentang persediaan kad SD&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_internal_action" product="default" msgid="274533758831212652">"Format"</string>
     <string name="storage_wizard_init_v2_or" msgid="5558706089661158026">"Atau"</string>
-    <string name="storage_wizard_init_v2_external_title" msgid="8129096036551264207">"Gunakan untuk storan mudah alih"</string>
-    <string name="storage_wizard_init_v2_external_summary" msgid="6436419488235871823">"Untuk memindahkan fail dan media antara peranti"</string>
-    <string name="storage_wizard_init_v2_external_action" msgid="781928899530539860">"Storan mudah alih"</string>
+    <string name="storage_wizard_init_v2_external_title" msgid="2786416384217054112">"Format kad SD untuk storan mudah alih"</string>
+    <string name="storage_wizard_init_v2_external_summary" msgid="3867896101011977386">"Simpan foto, video, muzik dan banyak lagi, serta akses daripada peranti lain. &lt;a href=https://support.google.com/android/answer/12153449&gt;Ketahui lebih lanjut tentang persediaan kad SD&lt;/a&gt;"</string>
+    <string name="storage_wizard_init_v2_external_action" msgid="6140058734875839081">"Format"</string>
     <string name="storage_wizard_init_v2_later" msgid="5366815913892609285">"Sediakan kemudian"</string>
     <string name="storage_wizard_format_confirm_v2_title" msgid="6294104100437326067">"Formatkan <xliff:g id="NAME">^1</xliff:g> ini?"</string>
     <string name="storage_wizard_format_confirm_v2_body" msgid="635958708974709506">"<xliff:g id="NAME_0">^1</xliff:g> ini perlu diformatkan untuk menyimpan apl, fail dan media. \n\nPemformatan akan memadamkan kandungan yang sedia ada di <xliff:g id="NAME_1">^2</xliff:g>. Untuk mengelakkan kehilangan kandungan, sandarkan kandungan itu pada <xliff:g id="NAME_2">^3</xliff:g> atau peranti yang lain."</string>
+    <string name="storage_wizard_format_confirm_v2_body_external" msgid="5810296966099830035">"<xliff:g id="NAME_0">^1</xliff:g> ini perlu diformat untuk menyimpan foto, video, muzik dan banyak lagi. \n\nPemformatan akan memadamkan kandungan sedia ada pada <xliff:g id="NAME_1">^2</xliff:g>. Untuk mengelakkan kehilangan kandungan, sandarkan kandungan pada peranti atau <xliff:g id="NAME_2">^3</xliff:g> yang lain."</string>
     <string name="storage_wizard_format_confirm_v2_action" msgid="5718254101386377126">"Formatkan <xliff:g id="NAME">^1</xliff:g>"</string>
     <string name="storage_wizard_migrate_v2_title" msgid="3471564531564756698">"Alihkan kandungan ke <xliff:g id="NAME">^1</xliff:g>?"</string>
     <string name="storage_wizard_migrate_v2_body" product="tablet" msgid="4541523202790415721">"Anda boleh mengalihkan fail, media dan apl tertentu ke <xliff:g id="NAME">^1</xliff:g> ini. \n\nPengalihan ini akan mengosongkan <xliff:g id="SIZE">^2</xliff:g> storan tablet anda dan mengambil masa kira-kira <xliff:g id="DURATION">^3</xliff:g>."</string>
@@ -1716,9 +1719,9 @@
     <string name="storage_wizard_slow_v2_body" msgid="7604252106419016929">"Anda masih dapat menggunakan <xliff:g id="NAME_0">^1</xliff:g> ini tetapi peranti ini mungkin perlahan. \n\nApl yang disimpan pada <xliff:g id="NAME_1">^2</xliff:g> ini mungkin tidak berfungsi dengan betul dan pemindahan kandungan mungkin mengambil masa yang panjang. \n\nCuba gunakan <xliff:g id="NAME_2">^3</xliff:g> yang lebih laju atau gunakan <xliff:g id="NAME_3">^4</xliff:g> ini untuk storan mudah alih."</string>
     <string name="storage_wizard_slow_v2_start_over" msgid="1806852287668077536">"Mulakan semula"</string>
     <string name="storage_wizard_slow_v2_continue" msgid="7469713755893007901">"Teruskan"</string>
-    <string name="storage_wizard_ready_v2_external_body" msgid="3896836008684280905">"Anda boleh mengalihkan kandungan ke <xliff:g id="NAME">^1</xliff:g>"</string>
-    <string name="storage_wizard_ready_v2_internal_body" msgid="5710665992219332454">"Untuk mengalihkan kandungan ke <xliff:g id="NAME">^1</xliff:g>, pergi ke "<b>"Tetapan &gt; Storan"</b></string>
-    <string name="storage_wizard_ready_v2_internal_moved_body" msgid="1269878056598666852">"Kandungan anda telah dialihkan ke <xliff:g id="NAME_0">^1</xliff:g>. \n\nUntuk mengurus <xliff:g id="NAME_1">^2</xliff:g> ini, pergi ke "<b>"Tetapan &gt; Storan"</b>"."</string>
+    <string name="storage_wizard_ready_v2_external_body" msgid="7688457485389886923">"Anda boleh mula menggunakan <xliff:g id="NAME">^1</xliff:g> anda"</string>
+    <string name="storage_wizard_ready_v2_internal_body" msgid="3520269956641115883">"Anda boleh mula menggunakan <xliff:g id="NAME">^1</xliff:g> anda"</string>
+    <string name="storage_wizard_ready_v2_internal_moved_body" msgid="1163588718127651062">"Anda boleh mula menggunakan <xliff:g id="NAME">^1</xliff:g> anda"</string>
     <string name="battery_status_title" msgid="4661768220545945771">"Status bateri"</string>
     <string name="battery_level_title" msgid="1371765298786083448">"Aras bateri"</string>
     <string name="apn_settings" msgid="4295467389400441299">"APN"</string>
@@ -2996,6 +2999,10 @@
     <string name="battery_usage_screen_footer" msgid="7899907241146636817">"Data penggunaan bateri ialah anggaran dan tidak mengukur penggunaan semasa telefon dicas"</string>
     <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"Data penggunaan bateri akan tersedia selepas anda menggunakan telefon anda selama beberapa jam."</string>
     <string name="battery_usage_chart" msgid="4114747521432440017">"Carta penggunaan bateri"</string>
+    <!-- no translation found for daily_battery_usage_chart (4176059567682992686) -->
+    <skip />
+    <!-- no translation found for hourly_battery_usage_chart (3098314511076561272) -->
+    <skip />
     <string name="process_stats_summary_title" msgid="502683176231281732">"Statistik Proses"</string>
     <string name="process_stats_summary" msgid="522842188571764699">"Statistik skema tentang proses yang sedang berjalan"</string>
     <string name="app_memory_use" msgid="7559666138324410666">"Penggunaan memori"</string>
@@ -3551,6 +3558,8 @@
     <string name="restriction_location_enable_summary" msgid="7139292323897390221">"Benarkan apl menggunakan maklumat lokasi anda"</string>
     <string name="wizard_back" msgid="8257697435061870191">"Kembali"</string>
     <string name="wizard_next" msgid="3884832431439072471">"Seterusnya"</string>
+    <string name="wizard_back_portable" msgid="5315939180781404882">"Beralih kepada mudah alih"</string>
+    <string name="wizard_back_adoptable" msgid="1447814356855134183">"Format cara lain"</string>
     <string name="wizard_finish" msgid="4220258401946825946">"Selesai"</string>
     <string name="regulatory_info_text" msgid="1154461023369976667"></string>
     <string name="sim_setup_wizard_title" msgid="3945520353564138219">"Kad SIM"</string>
@@ -5611,6 +5620,10 @@
     <string name="media_controls_title" msgid="403271085636252597">"Media"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Sematkan pemain media"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Untuk menyambung semula main balik dengan pantas, biarkan pemain media kekal terbuka dalam Tetapan Pantas"</string>
+    <!-- no translation found for media_controls_lockscreen_title (2188311721857512510) -->
+    <skip />
+    <!-- no translation found for media_controls_lockscreen_description (3320333660404439510) -->
+    <skip />
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"Tunjukkan pengesyoran media"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"Berdasarkan aktiviti anda"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"Sembunyikan pemain"</string>
